--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -170,7 +170,7 @@
 %
 % \subsection{Helpers}
 %
-% \begin{macro}[aux, EXP]{\use:nf, \use:fnf}
+% \begin{macro}[EXP]{\use:nf, \use:fnf}
 %   A simple variant.
 %    \begin{macrocode}
 \cs_generate_variant:Nn \use:nn { nf }
@@ -178,14 +178,14 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\tl_to_str:f}
+% \begin{macro}[EXP]{\tl_to_str:f}
 %   A simple variant.
 %    \begin{macrocode}
 \cs_generate_variant:Nn \tl_to_str:n { f }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_if_digit:NTF}
+% \begin{macro}[EXP]{\@@_if_digit:NTF}
 %   Here we expect |#1| to be a character with category other, or
 %   \cs{s__stop}.
 %    \begin{macrocode}
@@ -197,7 +197,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_put:nw, \@@_put:ow, \@@_put:fw}
 %   Put |#1| after an \cs{s__stop} delimiter.
 %    \begin{macrocode}
@@ -206,8 +206,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP, TF]{\@@_if_in:nN}
-% \begin{macro}[aux, EXP]{\@@_if_in_aux:NN}
+% \begin{macro}[EXP, TF]{\@@_if_in:nN}
+% \begin{macro}[EXP]{\@@_if_in_aux:NN}
 %   A copy of \cs{__str_if_contains_char:nNTF} to avoid relying on
 %   this weird internal string function.
 %    \begin{macrocode}
@@ -231,8 +231,8 @@
 %
 % \subsection{Parsing a format specification}
 %
-% \begin{macro}[aux, EXP]{\@@_parse:n}
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]{\@@_parse:n}
+% \begin{macro}[EXP]
 %   {
 %     \@@_parse_auxi:NN,
 %     \@@_parse_auxii:nN,
@@ -323,7 +323,7 @@
 % padding between the \meta{sign} and the \meta{body}, hence the need to
 % keep those separate.
 %
-% \begin{macro}[aux, EXP]{\@@_align_<:nnnN}
+% \begin{macro}[EXP]{\@@_align_<:nnnN}
 %   \begin{quote}
 %     \cs{@@_align_<:nnnN} \Arg{body} \Arg{sign} \Arg{width}
 %     \meta{fill}
@@ -344,7 +344,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_align_>:nnnN}
+% \begin{macro}[EXP]{\@@_align_>:nnnN}
 %   \begin{quote}
 %     \cs{@@_align_>:nnnN} \Arg{body} \Arg{sign} \Arg{width}
 %     \meta{fill}
@@ -364,7 +364,7 @@
 % \end{macro}
 %
 % \begingroup\catcode`\^=12
-% \begin{macro}[aux, EXP]{\@@_align_^:nnnN}
+% \begin{macro}[EXP]{\@@_align_^:nnnN}
 %   \begin{quote}
 %     \cs{@@_align_^:nnnN} \Arg{body} \Arg{sign} \Arg{width}
 %     \meta{fill}
@@ -401,7 +401,7 @@
 % \end{macro}
 % \endgroup
 %
-% \begin{macro}[aux, EXP]{\@@_align_=:nnnN}
+% \begin{macro}[EXP]{\@@_align_=:nnnN}
 %   \begin{quote}
 %     \cs{@@_align_=:nnnN} \Arg{body} \Arg{sign} \Arg{width}
 %     \meta{fill}
@@ -444,7 +444,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_tl:NNNnnNn}
+% \begin{macro}[EXP]{\@@_tl:NNNnnNn}
 %   \begin{quote}
 %     \cs{@@_tl:NNNnnNn} \meta{fill} \meta{alignment} \meta{sign}
 %     \Arg{width} \Arg{precision} \meta{style} \Arg{token list}
@@ -496,7 +496,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_tl_s:NNnnNNn}
+% \begin{macro}[EXP]{\@@_tl_s:NNnnNNn}
 %   \begin{quote}
 %     \cs{@@_tl_s:NNnnNNn} \cs{s__stop} \meta{function}
 %     \Arg{arguments} \Arg{width} \meta{fill} \meta{alignment}
@@ -539,7 +539,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq:nn, \@@_seq:ff}
+% \begin{macro}[EXP]{\@@_seq:nn, \@@_seq:ff}
 %   The first argument is the contents of a \texttt{seq} variable.  The
 %   second is a parsed \meta{format specification}.  Set up the loop.
 %    \begin{macrocode}
@@ -553,7 +553,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq_loop:nnNn}
+% \begin{macro}[EXP]{\@@_seq_loop:nnNn}
 %   \begin{quote}
 %     \cs{@@_seq_loop:nnNn} \Arg{done} \Arg{parsed format}
 %     \cs{__seq_item:n} \Arg{item}
@@ -573,7 +573,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_seq_end:w}
+% \begin{macro}[EXP]{\@@_seq_end:w}
 %   Pick the right piece in the loop above.
 %    \begin{macrocode}
 \cs_new:Npn \@@_seq_end:w #1#2#3#4 { \use_ii:nnn #3 }
@@ -590,7 +590,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:nn}
+% \begin{macro}[EXP]{\@@_int:nn}
 %   Parse the \meta{format specification} and feed it to
 %   \cs{@@_int:NNNnnNn}.  Then convert the result to a string
 %    \begin{macrocode}
@@ -606,7 +606,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:NNNnnNn}
+% \begin{macro}[EXP]{\@@_int:NNNnnNn}
 %   \begin{quote}
 %     \cs{@@_int:NNNnnNn} \meta{fill} \meta{alignment}
 %     \meta{sign} \Arg{width} \Arg{precision} \meta{style} \Arg{integer}
@@ -661,7 +661,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_int:NwnnNNn}
+% \begin{macro}[EXP]{\@@_int:NwnnNNn}
 %   \begin{quote}
 %     \cs{@@_int:NwnnNNn} \meta{function} \cs{s__stop}
 %     \Arg{width} \Arg{sign} \meta{fill} \meta{alignment} \Arg{integer}
@@ -699,7 +699,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp:nn}
+% \begin{macro}[EXP]{\@@_fp:nn}
 %   Parse the \meta{format specification} and feed it to
 %   \cs{@@_fp:NNNnnNn}.  Then convert the result to a string
 %    \begin{macrocode}
@@ -715,7 +715,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp:NNNnnNw}
+% \begin{macro}[EXP]{\@@_fp:NNNnnNw}
 %   \begin{quote}
 %     \cs{@@_fp:NNNnnNw} \meta{fill} \meta{alignment}
 %     \meta{format sign} \Arg{width} \Arg{precision} \meta{style}
@@ -772,7 +772,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp:wnnnNNw}
+% \begin{macro}[EXP]{\@@_fp:wnnnNNw}
 %   \begin{quote}
 %     \cs{@@_fp:wnnnNNw} \meta{formatting function} \cs{s__stop}
 %     \Arg{precision} \Arg{width} \Arg{sign} \meta{fill}
@@ -792,7 +792,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp_round:wn}
+% \begin{macro}[EXP]{\@@_fp_round:wn}
 %   Round the given floating point (not its absolute value, to play
 %   nicely with unusual rounding modes).
 %    \begin{macrocode}
@@ -801,8 +801,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp_e:wn}
-% \begin{macro}[aux, EXP]{\@@_fp_e_aux:wn}
+% \begin{macro}[EXP]{\@@_fp_e:wn}
+% \begin{macro}[EXP]{\@@_fp_e_aux:wn}
 %   With the |e| type, first filter out special cases.  In the normal
 %   case, round to |#4+1| significant figures (one before the decimal
 %   separator, |#4| after).
@@ -842,8 +842,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp_f:wn}
-% \begin{macro}[aux, EXP]{\@@_fp_f_aux:wwwn}
+% \begin{macro}[EXP]{\@@_fp_f:wn}
+% \begin{macro}[EXP]{\@@_fp_f_aux:wwwn}
 %   With the |f| type, first filter out special cases.  In the normal
 %   case, round to |#4| (absolute) decimal places.
 %    \begin{macrocode}
@@ -873,9 +873,9 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_fp_g:wn}
-% \begin{macro}[aux, EXP]{\@@_fp_g_aux:wn}
-% \begin{macro}[aux, EXP]{\@@_fp_to_scientific:n, \@@_fp_trim:w}
+% \begin{macro}[EXP]{\@@_fp_g:wn}
+% \begin{macro}[EXP]{\@@_fp_g_aux:wn}
+% \begin{macro}[EXP]{\@@_fp_to_scientific:n, \@@_fp_trim:w}
 %   With the |g| type, first filter out special cases.  In the normal
 %   case, round to |#4| significant figures, then test the exponent: if
 %   $-4\leq \meta{exponent} < \meta{precision}$, use the presentation
