--- a/l3experimental/xcoffins/xcoffins.dtx
+++ b/l3experimental/xcoffins/xcoffins.dtx
@@ -723,7 +723,7 @@
 %
 % \begin{macro}{\@@_design_names:N}
 % \begin{variable}{\Height, \Depth, \Width, \TotalHeight}
-% \begin{variable}[int]
+% \begin{variable}
 %   {\l_@@_height_dim, \l_@@_depth_dim, \l_@@_width_dim, \l_@@_totalheight_dim}
 %   Sets up design-level names for the various coffin dimensions. These are
 %   not defined outside of this scope, and are dimensions so that they work
