--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -22,7 +22,7 @@
 %
 %<*driver|package>
 % \begin{macro}{\GetIdInfo}
-% \begin{macro}[aux]{\GetIdInfoAuxI, \GetIdInfoAuxII, \GetIdInfoAuxIII}
+% \begin{macro}{\GetIdInfoAuxI, \GetIdInfoAuxII, \GetIdInfoAuxIII}
 %   The idea here is to extract out the information needed from a standard
 %   \textsc{svn} \texttt{Id} line, but to avoid a line that would get
 %   changed when the file is checked in. Hence the fact that none of the
