--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1214,7 +1214,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}{\clist_rand_item:n, \clist_rand_item:N, \clist_rand_item:c}
-% \begin{macro}[aux]{\@@_rand_item:nn}
+% \begin{macro}{\@@_rand_item:nn}
 %   The |N|-type function is not implemented through the |n|-type
 %   function for efficiency: for instance comma-list variables do not
 %   require space-trimming of their items.  Even testing for emptyness
@@ -1462,7 +1462,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_find_corner_maxima:N}
-% \begin{macro}[aux]{\@@_find_corner_maxima_aux:nn}
+% \begin{macro}{\@@_find_corner_maxima_aux:nn}
 %   The idea here is to find the extremities of the content of the
 %   coffin. This is done by looking for the smallest values for the bottom
 %   and left corners, and the largest values for the top and right
@@ -1494,7 +1494,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_find_bounding_shift:}
-% \begin{macro}[aux]{\@@_find_bounding_shift_aux:nn}
+% \begin{macro}{\@@_find_bounding_shift_aux:nn}
 %   The approach to finding the shift for the bounding box is similar to
 %   that for the corners. However, there is only one value needed here and
 %   a fixed input property list, so things are a bit clearer.
@@ -1707,7 +1707,7 @@
 %
 % \begin{macro}
 %   {\file_get_mdfive_hash:nN, \file_get_size:nN, \file_get_timestamp:nN}
-% \begin{macro}[aux]{\@@_get_details:nnN}
+% \begin{macro}{\@@_get_details:nnN}
 %   These are all wrappers around the \pdfTeX{} primitives doing the same
 %   jobs: as we want consistent file paths to be found, they are all set up
 %   using \cs{file_get_full_name:nN} and so are non-expandable \texttt{get}
@@ -1939,7 +1939,7 @@
 %     \msg_expandable_error:nnff   ,
 %     \msg_expandable_error:nnf
 %   }
-% \begin{macro}[aux]{\__msg_expandable_error_module:nn}
+% \begin{macro}{\__msg_expandable_error_module:nn}
 %   Pass to an auxiliary the message to display and the module name
 %    \begin{macrocode}
 \cs_new:Npn \msg_expandable_error:nnnnnn #1#2#3#4#5#6
@@ -2016,7 +2016,7 @@
 % \end{macro}
 %
 % \begin{macro}[rEXP]{\prop_map_tokens:Nn, \prop_map_tokens:cn}
-% \begin{macro}[aux]{\@@_map_tokens:nwwn}
+% \begin{macro}{\@@_map_tokens:nwwn}
 %   The mapping is very similar to \cs{prop_map_function:NN}.  It grabs
 %   one key--value pair at a time, and stops when reaching the marker
 %   key \cs{q_recursion_tail}, which cannot appear in normal keys since
@@ -2088,7 +2088,7 @@
 %     \seq_mapthread_function:NNN, \seq_mapthread_function:NcN,
 %     \seq_mapthread_function:cNN, \seq_mapthread_function:ccN
 %   }
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_mapthread_function:wNN, \@@_mapthread_function:wNw,
 %     \@@_mapthread_function:Nnnwnn
@@ -2132,7 +2132,7 @@
 % \end{macro}
 %
 % \begin{macro}{\seq_set_filter:NNn, \seq_gset_filter:NNn}
-% \begin{macro}[aux]{\@@_set_filter:NNNn}
+% \begin{macro}{\@@_set_filter:NNNn}
 %   Similar to \cs{seq_map_inline:Nn}, without a
 %   \cs{__prg_break_point:} because the user's code
 %   is performed within the evaluation of a boolean expression,
@@ -2156,7 +2156,7 @@
 % \end{macro}
 %
 % \begin{macro}{\seq_set_map:NNn, \seq_gset_map:NNn}
-% \begin{macro}[aux]{\@@_set_map:NNNn}
+% \begin{macro}{\@@_set_map:NNNn}
 %   Very similar to \cs{seq_set_filter:NNn}. We could actually
 %   merge the two within a single function, but it would have weird
 %   semantics.
@@ -2496,8 +2496,8 @@
 %     \tl_set_from_file:Nnn,  \tl_set_from_file:cnn,
 %     \tl_gset_from_file:Nnn, \tl_gset_from_file:cnn
 %   }
-% \begin{macro}[aux]{\@@_set_from_file:NNnn}
-% \begin{macro}[aux]{\@@_from_file_do:w}
+% \begin{macro}{\@@_set_from_file:NNnn}
+% \begin{macro}{\@@_from_file_do:w}
 %   The approach here is similar to that for doing a rescan, and so the same
 %   internals can be reused. Thus the plan is to insert a pair of tokens of
 %   the same charcode but different catcodes after the file has been read.
@@ -2541,7 +2541,7 @@
 %     \tl_set_from_file_x:Nnn,  \tl_set_from_file_x:cnn,
 %     \tl_gset_from_file_x:Nnn, \tl_gset_from_file_x:cnn
 %   }
-% \begin{macro}[aux]{\@@_set_from_file_x:NNnn}
+% \begin{macro}{\@@_set_from_file_x:NNnn}
 %   When reading a file and allowing expansion of the content, the set up
 %   only needs to prevent \TeX{} complaining about the end of the file. That
 %   is done simply, with a group then used to trap the definition needed.
@@ -2646,7 +2646,7 @@
 %     \@@_change_case_char_lower:N,
 %     \@@_change_case_char_upper:N
 %   }
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_lookup_mixed:N, \@@_lookup_lower:N, \@@_lookup_upper:N}
 % \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nNN}
 % \begin{macro}[EXP]{\@@_change_case_char_UTFviii:nNNN}
@@ -3986,7 +3986,7 @@
 % \begin{macro}{\tl_range_braced:Nnn, \tl_range_braced:cnn, \tl_range_braced:nnn}
 % \begin{macro}
 %   {\tl_range_unbraced:Nnn, \tl_range_unbraced:cnn, \tl_range_unbraced:nnn}
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_range:Nnnn, \@@_range:nnnNn, \@@_range:nnNn, \@@_range_skip:w,
 %     \@@_range_braced:w, \@@_range_collect_braced:w,
@@ -4184,7 +4184,7 @@
 %    \end{macrocode}
 %
 % \begin{macro}[TF]{\peek_N_type:}
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_execute_branches_N_type:, \@@_N_type:w, \@@_N_type_aux:nnw}
 %   All tokens are \texttt{N}-type tokens, except in four cases:
 %   begin-group tokens, end-group tokens, space tokens with character
