--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -733,7 +733,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[aux]{\@@_tmp:w}
+% \begin{macro}{\@@_tmp:w}
 %   A temporary function for various purposes.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_tmp:w { }
@@ -829,9 +829,9 @@
 %     \clist_gset_from_seq:Nc, \clist_gset_from_seq:cc
 %   }
 % \UnitTested
-% \begin{macro}[aux]{\@@_set_from_seq:NNNN}
-% \begin{macro}[aux]{\@@_wrap_item:n}
-% \begin{macro}[aux]{\@@_set_from_seq:w}
+% \begin{macro}{\@@_set_from_seq:NNNN}
+% \begin{macro}{\@@_wrap_item:n}
+% \begin{macro}{\@@_set_from_seq:w}
 %   Setting a comma list from a comma-separated list is done using a simple
 %   mapping. We wrap most items with \cs{exp_not:n}, and a comma. Items which
 %   contain a comma or a space are surrounded by an extra set of braces. The
@@ -876,7 +876,7 @@
 % \UnitTested
 % \begin{macro}{\clist_gconcat:NNN, \clist_gconcat:ccc}
 % \UnitTested
-% \begin{macro}[aux]{\@@_concat:NNNN}
+% \begin{macro}{\@@_concat:NNNN}
 %   Concatenating comma lists is not quite as easy as it seems, as
 %   there needs to be the correct addition of a comma to the output. So
 %   a little work to do.
@@ -914,7 +914,7 @@
 % \subsection{Removing spaces around items}
 %
 % \begin{macro}[EXP]{\@@_trim_spaces_generic:nw}
-% \begin{macro}[aux]{\@@_trim_spaces_generic:nn}
+% \begin{macro}{\@@_trim_spaces_generic:nn}
 %   \begin{syntax}
 %     \cs{@@_trim_spaces_generic:nw} \Arg{code} \cs{q_mark} \meta{item} |,|
 %   \end{syntax}
@@ -939,7 +939,7 @@
 % \end{macro}
 %
 % \begin{macro}[rEXP]{\@@_trim_spaces:n}
-% \begin{macro}[aux]{\@@_trim_spaces:nn}
+% \begin{macro}{\@@_trim_spaces:nn}
 %   The first argument of \cs{@@_trim_spaces:nn} is initially empty,
 %   and later a comma, namely, as soon as we have added an item to the
 %   resulting list. The auxiliary tests for the end of the list,
@@ -1014,7 +1014,7 @@
 %     \clist_gput_left:co, \clist_gput_left:cx
 %   }
 % \UnitTested
-% \begin{macro}[aux]{\@@_put_left:NNNn}
+% \begin{macro}{\@@_put_left:NNNn}
 %   Comma lists cannot hold empty values: there are therefore a couple
 %   of sanity checks to avoid accumulating commas.
 %    \begin{macrocode}
@@ -1052,7 +1052,7 @@
 %     \clist_gput_right:co, \clist_gput_right:cx
 %   }
 % \UnitTested
-% \begin{macro}[aux]{\@@_put_right:NNNn}
+% \begin{macro}{\@@_put_right:NNNn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \clist_put_right:Nn
   { \@@_put_right:NNNn \clist_concat:NNN \clist_set:Nn }
@@ -1076,7 +1076,7 @@
 %
 % \begin{macro}{\clist_get:NN, \clist_get:cN}
 % \UnitTested
-% \begin{macro}[aux]{\@@_get:wN}
+% \begin{macro}{\@@_get:wN}
 %   Getting an item from the left of a comma list is pretty easy: just
 %   trim off the first item using the comma.
 %    \begin{macrocode}
@@ -1099,7 +1099,7 @@
 % \UnitTested
 % \begin{macro}{\clist_gpop:NN, \clist_gpop:cN}
 % \UnitTested
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_pop:NNN, \@@_pop:wwNNN, \@@_pop:wN}
 %   An empty clist leads to \cs{q_no_value}, otherwise grab until the
 %   first comma and assign to the variable.  The second argument of
@@ -1143,7 +1143,7 @@
 % \begin{macro}[TF]{\clist_get:NN, \clist_get:cN}
 % \begin{macro}[TF]{\clist_pop:NN, \clist_pop:cN}
 % \begin{macro}[TF]{\clist_gpop:NN, \clist_gpop:cN}
-% \begin{macro}[aux]{\@@_pop_TF:NNN}
+% \begin{macro}{\@@_pop_TF:NNN}
 %   The same, as branching code: very similar to the above.
 %    \begin{macrocode}
 \prg_new_protected_conditional:Npnn \clist_get:NN #1#2 { T , F , TF }
@@ -1228,7 +1228,7 @@
 % \UnitTested
 % \begin{macro}{\clist_gremove_duplicates:N, \clist_gremove_duplicates:c}
 % \UnitTested
-% \begin{macro}[aux]{\@@_remove_duplicates:NN}
+% \begin{macro}{\@@_remove_duplicates:NN}
 %   Removing duplicates means making a new list then copying it.
 %    \begin{macrocode}
 \cs_new_protected:Npn \clist_remove_duplicates:N
@@ -1256,9 +1256,9 @@
 % \UnitTested
 % \begin{macro}{\clist_gremove_all:Nn, \clist_gremove_all:cn}
 % \UnitTested
-% \begin{macro}[aux]{\@@_remove_all:NNn}
-% \begin{macro}[aux]{\@@_remove_all:w}
-% \begin{macro}[aux]{\@@_remove_all:}
+% \begin{macro}{\@@_remove_all:NNn}
+% \begin{macro}{\@@_remove_all:w}
+% \begin{macro}{\@@_remove_all:}
 %   The method used here is very similar to \cs{tl_replace_all:Nnn}.
 %   Build a function delimited by the \meta{item} that should be removed,
 %   surrounded with commas, and call that function followed by
@@ -1431,7 +1431,7 @@
 %     \clist_if_in:cn, \clist_if_in:cV, \clist_if_in:co,
 %     \clist_if_in:nn, \clist_if_in:nV, \clist_if_in:no
 %   }
-% \begin{macro}[aux]{\@@_if_in_return:nn}
+% \begin{macro}{\@@_if_in_return:nn}
 % \UnitTested
 %   See description of the \cs{tl_if_in:Nn} function for details.
 %   We simply surround the comma list, and the item, with commas.
@@ -1469,7 +1469,7 @@
 %
 % \begin{macro}{\clist_map_function:NN, \clist_map_function:cN}
 % \UnitTested
-% \begin{macro}[aux]{\@@_map_function:Nw}
+% \begin{macro}{\@@_map_function:Nw}
 %   If the variable is empty, the mapping is skipped (otherwise,
 %   that comma-list would be seen as consisting of one empty item).
 %   Then loop over the comma-list, grabbing one comma-delimited
@@ -1499,8 +1499,8 @@
 %
 % \begin{macro}{\clist_map_function:nN}
 % \UnitTested
-% \begin{macro}[aux]{\@@_map_function_n:Nn}
-% \begin{macro}[aux]{\@@_map_unbrace:Nw}
+% \begin{macro}{\@@_map_function_n:Nn}
+% \begin{macro}{\@@_map_unbrace:Nw}
 %   The \texttt{n}-type mapping function is a bit more awkward,
 %   since spaces must be trimmed from each item.
 %   Space trimming is again based on \cs{@@_trim_spaces_generic:nw}.
@@ -1572,7 +1572,7 @@
 % \begin{macro}{\clist_map_variable:NNn, \clist_map_variable:cNn}
 % \UnitTested
 % \begin{macro}{\clist_map_variable:nNn}
-% \begin{macro}[aux]{\@@_map_variable:Nnw}
+% \begin{macro}{\@@_map_variable:Nnw}
 %   As for other comma-list mappings, filter out the case of
 %   an empty list. Same approach as \cs{clist_map_function:Nn},
 %   additionally we store each item in the given variable.
@@ -1619,8 +1619,8 @@
 % \end{macro}
 %
 % \begin{macro}{\clist_count:N, \clist_count:c, \clist_count:n}
-% \begin{macro}[aux]{\@@_count:n}
-% \begin{macro}[aux]{\@@_count:w}
+% \begin{macro}{\@@_count:n}
+% \begin{macro}{\@@_count:w}
 %   Counting the items in a comma list is done using the same approach as for
 %   other token count functions: turn each entry into a \texttt{+1} then use
 %   integer evaluation to actually do the mathematics.
@@ -1729,8 +1729,8 @@
 % \subsection{Using a single item}
 %
 % \begin{macro}{\clist_item:Nn, \clist_item:cn}
-% \begin{macro}[aux]{\@@_item:nnnN, \@@_item:ffoN, \@@_item:ffnN}
-% \begin{macro}[aux]{\@@_item_N_loop:nw}
+% \begin{macro}{\@@_item:nnnN, \@@_item:ffoN, \@@_item:ffnN}
+% \begin{macro}{\@@_item_N_loop:nw}
 %   To avoid needing to test the end of the list at each step,
 %   we first compute the \meta{length} of the list. If the item number
 %   is~$0$, less than $-\meta{length}$, or more than $\meta{length}$,
@@ -1776,7 +1776,7 @@
 % \end{macro}
 %
 % \begin{macro}{\clist_item:nn}
-% \begin{macro}[aux]{
+% \begin{macro}{
 %     \@@_item_n:nw,
 %     \@@_item_n_loop:nw,
 %     \@@_item_n_end:n,
