--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -561,7 +561,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_detect_internals_bool, \l_@@_detect_internals_tl}
+% \begin{variable}{\l_@@_detect_internals_bool, \l_@@_detect_internals_tl}
 %   If \texttt{true}, \pkg{l3doc} will check for use of internal
 %   commands \cs[no-index]{__\meta{pkg}_\ldots{}} from other packages in
 %   \texttt{macrocode} environments and in~\cs{cs}.  Also a token list
@@ -574,7 +574,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_output_coffin}
+% \begin{variable}{\l_@@_output_coffin}
 %   The \env{function} environment is typeset by combining coffins
 %   containing various pieces (function names, description, \emph{etc.})
 %   into this coffin.
@@ -583,7 +583,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {\l_@@_functions_coffin, \l_@@_descr_coffin, \l_@@_syntax_coffin}
 %   These coffins contain respectively the list of function names
 %   (argument of the \env{function} environment), the text between
@@ -596,7 +596,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_syntax_box}
+% \begin{variable}{\g_@@_syntax_box}
 %   The contents of the \env{syntax} environment are typeset in this box
 %   before being transferred to \cs{l_@@_syntax_coffin}.
 %    \begin{macrocode}
@@ -604,7 +604,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_in_function_bool}
+% \begin{variable}{\l_@@_in_function_bool}
 %   True when inside a \texttt{function} or \texttt{variable}
 %   environment.  Used by the \texttt{syntax} environment to determine
 %   its behaviour.
@@ -613,7 +613,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_long_name_bool, \l_@@_trial_width_dim}
+% \begin{variable}{\l_@@_long_name_bool, \l_@@_trial_width_dim}
 %   The boolean \cs{l_@@_long_name_bool} is \texttt{true} if the width
 %   \cs{l_@@_trial_width_dim} of the coffin \cs{l_@@_functions_coffin}
 %   (containing the current function names) is bigger than the space
@@ -624,7 +624,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_nested_macro_int}
+% \begin{variable}{\l_@@_nested_macro_int}
 %   The nesting of \env{macro} environments (this is now~$0$ outside a
 %   \env{macro} environment).
 %    \begin{macrocode}
@@ -632,7 +632,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {
 %     \l_@@_macro_tested_bool,
 %     \g_@@_missing_tests_prop,
@@ -650,7 +650,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[aux]
+% \begin{variable}
 %   {
 %     \l_@@_macro_internal_bool,
 %     \l_@@_macro_aux_bool,
@@ -681,7 +681,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[aux]
+% \begin{variable}
 %   {
 %     \g_@@_lmodern_bool,
 %     \g_@@_checkfunc_bool,
@@ -695,7 +695,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int, \l_@@_tmpa_seq}
+% \begin{variable}{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int, \l_@@_tmpa_seq}
 %   Some temporary variables.
 %    \begin{macrocode}
 \tl_new:N \l_@@_tmpa_tl
@@ -705,7 +705,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_block_tl}
+% \begin{variable}{\l_@@_names_block_tl}
 %   List of local sequence variables (produced through
 %   \cs{@@_lseq_name:n}), one for each set of variants in a
 %   \env{function} or \env{macro} environment.  More precisely these
@@ -719,7 +719,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_variants_seq}
+% \begin{variable}{\g_@@_variants_seq}
 %   Stores rather temporarily the list of variants (signatures only) of
 %   a function/macro that is being documented.  It is global because we
 %   need it to keep its value throughout cells of an alignment.
@@ -728,7 +728,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_verb_bool}
+% \begin{variable}{\l_@@_names_verb_bool}
 %   Set to |true| if the main argument of a macro/function environment
 %   should be used as is, without removing any comma or space.
 %    \begin{macrocode}
@@ -736,7 +736,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_seq}
+% \begin{variable}{\l_@@_names_seq}
 %   List of functions/environments/\ldots{} appearing as arguments of a
 %   given \env{function} or \env{macro} environment.  These are the
 %   names after conversion of |_@@| and |@@| to |__|\meta{module name}
@@ -746,7 +746,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_nested_names_seq}
+% \begin{variable}{\g_@@_nested_names_seq}
 %   Collects all macros in nested \env{macro} environments, to use them
 %   in the \enquote{End definition} text.
 %    \begin{macrocode}
@@ -754,7 +754,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\c_@@_backslash_tl, \c_@@_backslash_token}
+% \begin{variable}{\c_@@_backslash_tl, \c_@@_backslash_token}
 %   A single backslash, as a token list, or as an implicit character
 %   token.
 %    \begin{macrocode}
@@ -814,7 +814,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {
 %     \l_@@_cmd_tl,
 %     \l_@@_cmd_index_tl,
@@ -866,7 +866,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_function_label_clist, \l_@@_no_label_bool}
+% \begin{variable}{\l_@@_function_label_clist, \l_@@_no_label_bool}
 %   Option of a \env{function} environment which replaces the label that
 %   would normally be inserted by labels for the given list of control
 %   sequences.  This is only useful to avoid duplicate labels when a
@@ -877,7 +877,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_date_added_tl, \l_@@_date_updated_tl}
+% \begin{variable}{\l_@@_date_added_tl, \l_@@_date_updated_tl}
 %   Values of some options of the \env{function} environment.
 %    \begin{macrocode}
 \tl_new:N \l_@@_date_added_tl
@@ -885,7 +885,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_macro_argument_tl}
+% \begin{variable}{\l_@@_macro_argument_tl}
 %   Save the argument of a \env{macro} or \env{function} environment for
 %   use in error messages.
 %    \begin{macrocode}
@@ -900,7 +900,7 @@ and all files in that bundle must be distributed together.
 %
 % \subsection{Variants and helpers}
 %
-% \begin{macro}[aux]{\@@_tmpa:w, \@@_tmpb:w}
+% \begin{macro}{\@@_tmpa:w, \@@_tmpb:w}
 %   Auxiliary macros for temporary use.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_tmpa:w ?
@@ -978,7 +978,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_trim_right:Nn, \@@_trim_right:No}
+% \begin{macro}{\@@_trim_right:Nn, \@@_trim_right:No}
 %   Removes all material after |#2| in the token list variable~|#1|.
 %   Perhaps combine with \cs{@@_key_trim_module:n}?
 %    \begin{macrocode}
@@ -991,8 +991,8 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_replace_at_at:N}
-% \begin{macro}[aux]{\@@_replace_at_at_aux:Nn}
+% \begin{macro}{\@@_replace_at_at:N}
+% \begin{macro}{\@@_replace_at_at_aux:Nn}
 %   The goal is to replace |@@| by the current module name.  We take
 %   advantage of this function to also detect internal macros.  If there is
 %   no \meta{module~name}, do nothing.  Otherwise, sanitize the catcodes
@@ -1031,7 +1031,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_detect_internals:N}
+% \begin{macro}{\@@_detect_internals:N}
 %   After splitting at each |__| and removing the leading item from the
 %   sequence (since it does not follow |__|), remove everything after
 %   any space or end-of-line to get a good approximation of the control
@@ -1074,7 +1074,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 %
 % \begin{macro}[rEXP]{\@@_signature_base_form:n}
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_signature_base_form_aux:n, \@@_signature_base_form_aux:w}
 %   Expands to the \enquote{base form} of the signature.  For instance,
 %   given |noxcfvV| it would obtain |nnnNnnn|, or given |ow| it would
@@ -1105,7 +1105,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_predicate_from_base:n}
+% \begin{macro}{\@@_predicate_from_base:n}
 %   Get predicate from a function's base name.  The code is not broken
 %   by functions with no signature.  The |n|-type version can be used
 %   for keys and other non-control sequences.  The output after
@@ -1120,9 +1120,9 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_split_function_do:nn, \@@_split_function_do:on}
-% \begin{macro}[aux]{\@@_get_function_name:n, \@@_get_function_signature:n}
-% \begin{macro}[aux]{\@@_split_function_auxi:w, \@@_split_function_auxii:w}
+% \begin{macro}{\@@_split_function_do:nn, \@@_split_function_do:on}
+% \begin{macro}{\@@_get_function_name:n, \@@_get_function_signature:n}
+% \begin{macro}{\@@_split_function_auxi:w, \@@_split_function_auxii:w}
 %   Similar to internal functions defined in \pkg{l3basics}, but here we
 %   operate on strings directly rather than control sequences.
 %    \begin{macrocode}
@@ -1200,7 +1200,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_base_form_signature_do:nnn}
+% \begin{macro}{\@@_base_form_signature_do:nnn}
 %   Do |#2{#1}| if there is no signature, or if |#1| contains two colons
 %   in a row (this covers the weird function |\::N| and so on).
 %   Otherwise apply |#3| with the following two arguments: the base form
@@ -1232,7 +1232,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 %
 % \begin{macro}[pTF]{\@@_date_compare:nNn}
-% \begin{macro}[aux]{\@@_date_compare_aux:nnnNnnn, \@@_date_compare_aux:w}
+% \begin{macro}{\@@_date_compare_aux:nnnNnnn, \@@_date_compare_aux:w}
 %   Expects |#1| and |#3| to be dates in the format YYYY-MM-DD (but
 %   accepts YYYY or YYYY-MM too).  Compares them using |#2| (one of |<|,
 %   |=|, |>|), filling in zeros for missing data.
@@ -1276,7 +1276,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_gprop_name:n, \@@_lseq_name:n}
+% \begin{macro}{\@@_gprop_name:n, \@@_lseq_name:n}
 %   We need to keep track of some information about control sequences
 %   (and other strings) that are being (or have been) documented.  Some
 %   is stored into global props and some into local seqs, whose name
@@ -1477,7 +1477,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\ifnot@excluded}
+% \begin{macro}{\ifnot@excluded}
 %   This function tests whether a macro name stored in
 %   \tn{macro@namepart} was excluded from indexing by \tn{DoNotIndex}.
 %   Rather than trying to fix catcodes that come into here, turn
@@ -1495,7 +1495,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 %
 % \begin{macro}{\pdfstringnewline}
-% \begin{macro}[aux]{\@@_pdfstring_newline:w}
+% \begin{macro}{\@@_pdfstring_newline:w}
 %   We avoid some hyperref warnings by making |\\| (almost) trivial in
 %   bookmarks: more precisely it might be used with a star and an
 %   optional argument, which we thus remove using an \pkg{xparse}
@@ -1528,7 +1528,7 @@ and all files in that bundle must be distributed together.
 % later.)
 %
 % \begin{macro}{\list}
-% \begin{macro}[aux]{\@@_oldlist:nn}
+% \begin{macro}{\@@_oldlist:nn}
 %   Customise lists.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_oldlist:nn \list
@@ -1638,7 +1638,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_pdfstring_cmd:w,
 %     \@@_pdfstring_cs:w,
@@ -1855,7 +1855,7 @@ and all files in that bundle must be distributed together.
   }
 %    \end{macrocode}
 %
-% \begin{macro}[int]{\@@_cmd:nn, \@@_cmd:no}
+% \begin{macro}{\@@_cmd:nn, \@@_cmd:no}
 %   Apply the key--value \meta{options}~|#1| after setting some
 %   default values.  Then (unless |replace=false|) replace |@@| in~|#2|,
 %   which is a bit tricky: the |_| must be given the catcode expected by
@@ -2003,7 +2003,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]
+% \begin{macro}
 %   {\@@_get_hyper_target:nN, \@@_get_hyper_target:oN, \@@_get_hyper_target:xN}
 %   Create a \pkg{hyperref} anchor from a macro name~|#1| and stores it
 %   in the token list variable~|#2|.  For instance, |\prg_replicate:nn|
@@ -2020,7 +2020,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_names_get_seq:nN}
+% \begin{macro}{\@@_names_get_seq:nN}
 %   The argument~|#1| (argument of a |function| or |macro| environment)
 %   has catcodes $10$ (space), $12$ (other) and $13$ (active).  Sanitize
 %   catcodes.  If the |verb| option was used, output a one-item
@@ -2054,7 +2054,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_names_parse:, \@@_names_parse_one:n}
+% \begin{macro}{\@@_names_parse:, \@@_names_parse_one:n}
 %   The goal is to group variants together.  We populate
 %   \cs{l_@@_names_block_tl} with local sequence variable named with
 %   \cs{@@_lseq_name:n} after the base forms.  When encountering a new
@@ -2114,8 +2114,8 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_names_typeset:}
-% \begin{macro}[aux]{\@@_names_typeset_auxi:n}
+% \begin{macro}{\@@_names_typeset:}
+% \begin{macro}{\@@_names_typeset_auxi:n}
 %   This code is in particular used when typesetting function names in a
 %   \env{function} environment.  The mapping to \cs{l_@@_names_block_tl}
 %   cannot use \cs{tl_map_inline:Nn} because the code following |\\|
@@ -2157,7 +2157,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_names_typeset_auxii:n, \@@_names_typeset_auxii:x}
 %   In case the option |pTF| was given, typeset predicates before the
 %   |TF| functions.  In case the option |noTF| was given, typeset the
@@ -2180,7 +2180,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_names_typeset_block:nN, \@@_names_typeset_block:xN}
+% \begin{macro}{\@@_names_typeset_block:nN, \@@_names_typeset_block:xN}
 %   Names in \env{function} and \env{macro} environments are typeset
 %   differently.  To distinguish the two note that
 %   \cs{l_@@_nested_macro_int} is at least one when in an \env{macro}
@@ -2248,7 +2248,7 @@ and all files in that bundle must be distributed together.
   }
 %    \end{macrocode}
 %
-% \begin{macro}[aux]{\@@_date_set:Nn}
+% \begin{macro}{\@@_date_set:Nn}
 %   Normalize the date into the format \texttt{YYYY-MM-DD}; more
 %   precisely month and day are allowed to be single digits.
 %    \begin{macrocode}
@@ -2265,7 +2265,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_deprecated_on:n}
+% \begin{macro}{\@@_deprecated_on:n}
 %   The date comparison function expects two dates in the YYYY-MM-DD
 %   format (|-|~is not subtraction here).
 %   Complain if a deprecated function should have been removed earlier.
@@ -2287,13 +2287,13 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_function:nnw}
+% \begin{macro}{\@@_function:nnw}
 %   \begin{arguments}
 %     \item Key--value list.
 %     \item Comma-separated list of functions; input has already been
 %       sanitised by catcode changes before reading the argument.
 %   \end{arguments}
-% \begin{macro}[int]{\@@_function_end:}
+% \begin{macro}{\@@_function_end:}
 %   Make sure any paragraph is finished, and similar safe practices at
 %   the beginning of an environment which will typeset material.
 %   Initialize some variables.  Parse the key--value list.  Clean up the
@@ -2326,7 +2326,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_function_typeset_start:, \@@_function_typeset_stop:}
 %   At the start of the \env{function} environment, before performing
 %   any assignment, close the last paragraph, and set up the typesetting
@@ -2345,7 +2345,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_function_init:}
+% \begin{macro}{\@@_function_init:}
 %   Complain if \texttt{function} environments are nested.  Clear
 %   various variables.
 %    \begin{macrocode}
@@ -2373,7 +2373,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_shorthand_meta:, \@@_shorthand_meta:w}
+% \begin{macro}{\@@_shorthand_meta:, \@@_shorthand_meta:w}
 %   Allow |<...>| to be used as markup for |\meta{...}|.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_shorthand_meta:
@@ -2382,7 +2382,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_function_reset:}
+% \begin{macro}{\@@_function_reset:}
 %   Clear some variables.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_function_reset:
@@ -2392,7 +2392,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_function_typeset:}
+% \begin{macro}{\@@_function_typeset:}
 %   Typeset in the coffin \cs{l_@@_functions_coffin} the functions listed in
 %   \cs{l_@@_names_block_tl} and the relevant dates, then set
 %   \cs{l_@@_long_name_bool} to be \texttt{true} if this coffin is
@@ -2411,7 +2411,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {\@@_function_descr_start:w, \@@_function_descr_stop:}
 %   The last step in \cs{@@_function:nnw} (the beginning of a
 %   \env{function} environment) is to open a coffin which will capture
@@ -2429,7 +2429,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_function_assemble:}
+% \begin{macro}{\@@_function_assemble:}
 %   The box \cs{g_@@_syntax_box} contains the contents of the syntax
 %   environment if it was used.  Now that we have all the pieces, join
 %   together the syntax coffin, the names coffin, and the description
@@ -2479,7 +2479,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_typeset_functions:}
+% \begin{macro}{\@@_typeset_functions:}
 %   This function builds the \cs{l_@@_functions_coffin} by typesetting the
 %   function names (with variants) and the relevant dates in a
 %   \env{tabular} environment.  The use of rules \tn{toprule},
@@ -2506,9 +2506,9 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 %
 % ^^A TODO: collect all index targets from a given function environment in a box and stick it at the top.
-% \begin{macro}[int]
+% \begin{macro}
 %   {\@@_typeset_function_block:nN, \@@_typeset_function_block:xN}
-% \begin{macro}[aux]{\@@_function_index:n, \@@_function_index:x}
+% \begin{macro}{\@@_function_index:n, \@@_function_index:x}
 %   |#1| is a csname, |#2| a boolean indicating whether to add |TF| or not.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_typeset_function_block:nN #1#2
@@ -2592,7 +2592,7 @@ and all files in that bundle must be distributed together.
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[internal]{\@@_typeset_dates:}
+% \begin{macro}{\@@_typeset_dates:}
 %   To display metadata for when functions are added/modified.
 %   This function must be expandable since it produces rules for use in
 %   alignments.
@@ -2618,7 +2618,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_syntax:w, \@@_syntax_end:}
+% \begin{macro}{\@@_syntax:w, \@@_syntax_end:}
 %   Implement the \env{syntax} environment.
 %    \begin{macrocode}
 \dim_new:N \l_@@_syntax_dim
@@ -2720,7 +2720,7 @@ and all files in that bundle must be distributed together.
   }
 %    \end{macrocode}
 %
-% \begin{macro}[int]{\@@_macro:nnw}
+% \begin{macro}{\@@_macro:nnw}
 %   The arguments are a key--value list of \meta{options} and a
 %   comma-list of \meta{names}, read verbatim by \pkg{xparse}.  First
 %   initialize some variables before applying the \meta{options}, then
@@ -2745,7 +2745,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_init:}
+% \begin{macro}{\@@_macro_init:}
 %   The booleans hold various key--value options,
 %   \cs{l_@@_nested_macro_int} counts the number of \env{macro}
 %   environments around the current point (is $0$ outside).
@@ -2780,7 +2780,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_reset:}
+% \begin{macro}{\@@_macro_reset:}
 %   We ensure that \cs{cs} commands nested inside a macro whose module
 %   is imposed are not affected.
 %    \begin{macrocode}
@@ -2791,7 +2791,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_adjust_internal:}
+% \begin{macro}{\@@_macro_adjust_internal:}
 %   If all
 %   macros in \cs{l_@@_names_seq} contain |__| then mark them as being
 %   internal. Probably a mix should be an error \dots
@@ -2808,7 +2808,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_save_names:}
+% \begin{macro}{\@@_macro_save_names:}
 %   The list of names defined in a set of \env{macro} environments is
 %   eventually used to display on which page they are documented.
 %    \begin{macrocode}
@@ -2831,7 +2831,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_dump:}
+% \begin{macro}{\@@_macro_dump:}
 %   This calls |\makelabel{}|
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_macro_dump:
@@ -2855,7 +2855,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_typeset_block:nN}
+% \begin{macro}{\@@_macro_typeset_block:nN}
 %   Used to typeset a macro and its variants.  |#1| is the macro name,
 %   |#2| is a boolean controlling whether to add |TF|.
 %    \begin{macrocode}
@@ -2919,7 +2919,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_typeset_one:nN}
+% \begin{macro}{\@@_macro_typeset_one:nN}
 %   For a long time, \cls{l3doc} collected the macro names as labels in
 %   the first items of nested \tn{trivlist}, but these were not closed
 %   properly with \tn{endtrivlist}.  Also, it interacted in surprising
@@ -3043,7 +3043,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_test_missing:n}
+% \begin{macro}{\@@_test_missing:n}
 %   Keys in \cs{g_@@_missing_tests_prop} are lists of macros given as
 %   arguments of one \env{macro} environment.  Values are pairs of a
 %   file name and a comment about the missing tests.
@@ -3066,7 +3066,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_end:}
+% \begin{macro}{\@@_macro_end:}
 %   It is too late for anyone to declare a test file for this macro, so
 %   we can check now whether the macro is tested.  If the \env{macro}
 %   environment which is being ended is the outermost one, then wrap
@@ -3087,7 +3087,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_end_check_tested:}
+% \begin{macro}{\@@_macro_end_check_tested:}
 %   If the |checktest| option was issued and the macro is not an
 %   auxiliary nor a variable (and it does not have a test), then add it
 %   to the sequence of non-tested macros.
@@ -3113,7 +3113,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_macro_end_style:n}
+% \begin{macro}{\@@_macro_end_style:n}
 %   Style for the extra information at the end of a top-level
 %   \env{macro} environment.
 %    \begin{macrocode}
@@ -3125,7 +3125,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_print_end_definition:,
 %     \@@_macro_end_wrap_item:n,
@@ -3373,7 +3373,7 @@ and all files in that bundle must be distributed together.
 %
 % \begin{macro}
 %   {\StopEventually, \Finale, \AlsoImplementation, \OnlyDescription}
-% \begin{variable}[aux]{\g_@@_finale_tl}
+% \begin{variable}{\g_@@_finale_tl}
 %   TODO: remove these four commands altogether, document that it is
 %   better to use the \env{documentation} and \env{implementation}
 %   environments.
@@ -3400,7 +3400,7 @@ and all files in that bundle must be distributed together.
 % \end{variable}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_input:n}
+% \begin{macro}{\@@_input:n}
 %   Inputting a file, with some setup: the module name should be empty
 %   before the first |<@@=|\meta{module}|>| line in the file.
 %    \begin{macrocode}
@@ -3554,7 +3554,7 @@ and all files in that bundle must be distributed together.
 %
 % \subsubsection{The \env{macrocode} environment}
 %
-% \begin{macro}[aux]{\xmacro@code, \@@_xmacro_code:n, \@@_xmacro_code:w}
+% \begin{macro}{\xmacro@code, \@@_xmacro_code:n, \@@_xmacro_code:w}
 %   Hook into the \texttt{macrocode} environment in a dirty way:
 %   \tn{xmacro@code} is responsible for grabbing (and tokenizing) the
 %   body of the environment.  Redefine it to pass what it grabs to
@@ -3818,7 +3818,7 @@ and all files in that bundle must be distributed together.
 %
 % \subsubsection{Internal index commands}
 %
-% \begin{macro}[int]{\it@is@a}
+% \begin{macro}{\it@is@a}
 %   The index of one-character commands within the \env{macrocode}
 %   environment is produced using \tn{it@is@a} \meta{char}.  Alter that
 %   command.
@@ -3838,7 +3838,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_special_index:nn}
+% \begin{macro}{\@@_special_index:nn}
 % ^^A TODO this override is somewhat a hack
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_special_index:nn #1#2
@@ -3991,7 +3991,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_quote_special_char:N}
+% \begin{macro}{\@@_quote_special_char:N}
 % Quote some special characters.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_quote_special_char:N #1
@@ -4007,7 +4007,7 @@ and all files in that bundle must be distributed together.
 %
 % \subsubsection{Finding sort-key and module}
 %
-% \begin{macro}[aux]{\@@_key_get:n}
+% \begin{macro}{\@@_key_get:n}
 %   Sets \cs{l_@@_index_macro_tl}, \cs{l_@@_index_key_tl}, and
 %   \cs{l_@@_index_module_tl} from |#1|.  The base function is stored by
 %   \cs{@@_key_get_base:nN} in \cs{l_@@_index_macro_tl}, falling back to
@@ -4053,7 +4053,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_key_trim_module:n, \@@_key_drop_underscores:}
+% \begin{macro}{\@@_key_trim_module:n, \@@_key_drop_underscores:}
 %   Helper that removes from \cs{l_@@_index_module_tl} everything after
 %   the first occurence of |#1|.  Helper that removes any leading
 %   underscore from \cs{l_@@_index_key_tl}.
@@ -4073,7 +4073,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_key_func:}
+% \begin{macro}{\@@_key_func:}
 %   The function \cs{@@_key_func:} is used if there is a colon, so
 %   either for usual \pkg{expl3} functions or for keys from
 %   \pkg{l3keys}.  After removing from the key a leading dot (for the
@@ -4092,7 +4092,7 @@ and all files in that bundle must be distributed together.
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_key_var:, \@@_key_get_module:}
+% \begin{macro}{\@@_key_var:, \@@_key_get_module:}
 %   The function \cs{@@_key_var:} covers cases with no~|:| but with~|_|,
 %   typically variables but occasionally non-\pkg{expl3} functions such
 %   as \Lua{} function with underscores.  First test the second
