--- a/l3kernel/l3fp-traps.dtx
+++ b/l3kernel/l3fp-traps.dtx
@@ -137,7 +137,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_trap_invalid_operation_set_error: ,
 %     \@@_trap_invalid_operation_set_flag:  ,
@@ -187,7 +187,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_trap_division_by_zero_set_error: ,
 %     \@@_trap_division_by_zero_set_flag:  ,
@@ -229,21 +229,21 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_trap_overflow_set_error: ,
 %     \@@_trap_overflow_set_flag:  ,
 %     \@@_trap_overflow_set_none:  ,
 %     \@@_trap_overflow_set:N      ,
 %   }
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_trap_underflow_set_error: ,
 %     \@@_trap_underflow_set_flag:  ,
 %     \@@_trap_underflow_set_none:  ,
 %     \@@_trap_underflow_set:N      ,
 %   }
-% \begin{macro}[aux]{\@@_trap_overflow_set:NnNn}
+% \begin{macro}{\@@_trap_overflow_set:NnNn}
 %   Just as for invalid operations and division by zero, the three
 %   different behaviours are obtained by feeding \cs{prg_do_nothing:},
 %   \cs{use_none:nnnnn} or \cs{use_none:nnnnnnn} to an auxiliary, with a
@@ -294,7 +294,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]
+% \begin{macro}[EXP]
 %   {
 %     \@@_invalid_operation:nnw, \@@_invalid_operation_o:Nww,
 %     \@@_invalid_operation_tl_o:ff,
@@ -320,7 +320,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]
+% \begin{macro}[EXP]
 %   {\@@_invalid_operation_o:nw, \@@_invalid_operation_o:fw}
 %   Convenient short-hands for returning \cs{c_nan_fp} for a unary or
 %   binary operation, and expanding after.
@@ -333,7 +333,7 @@
 %
 % \subsection{Errors}
 %
-% \begin{macro}[int, EXP]{\@@_error:nnnn, \@@_error:nnfn, \@@_error:nffn}
+% \begin{macro}[EXP]{\@@_error:nnnn, \@@_error:nnfn, \@@_error:nffn}
 %    \begin{macrocode}
 \cs_new:Npn \@@_error:nnnn
   { \__msg_kernel_expandable_error:nnnnn { kernel } }
