--- a/l3kernel/l3fp-trig.dtx
+++ b/l3kernel/l3fp-trig.dtx
@@ -58,7 +58,7 @@
 %<@@=fp>
 %    \end{macrocode}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {
 %     \@@_parse_word_acos:N  ,
 %     \@@_parse_word_acosd:N ,
@@ -105,7 +105,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {
 %     \@@_parse_word_acot:N , \@@_parse_word_acotd:N,
 %     \@@_parse_word_atan:N , \@@_parse_word_atand:N,
@@ -149,7 +149,7 @@
 %
 % \subsubsection{Filtering special cases}
 %
-% \begin{macro}[int, EXP]{\@@_sin_o:w}
+% \begin{macro}[EXP]{\@@_sin_o:w}
 %   This function, and its analogs for \texttt{cos}, \texttt{csc},
 %   \texttt{sec}, \texttt{tan}, and \texttt{cot} instead of
 %   \texttt{sin}, are followed either by \cs{use_i:nn} and a float in
@@ -182,7 +182,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_cos_o:w}
+% \begin{macro}[EXP]{\@@_cos_o:w}
 %   The cosine of $\pm 0$ is $1$.  The cosine of $\pm\infty$ raises an
 %   invalid operation exception.  The cosine of \nan{} is itself.
 %   Otherwise, the \texttt{trig} function reduces the argument to at
@@ -209,7 +209,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_csc_o:w}
+% \begin{macro}[EXP]{\@@_csc_o:w}
 %   The cosecant of $\pm 0$ is $\pm \infty$ with the same sign, with a
 %   division by zero exception (see \cs{@@_cot_zero_o:Nfw} defined
 %   below), which requires the function name.  The cosecant of
@@ -239,7 +239,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_sec_o:w}
+% \begin{macro}[EXP]{\@@_sec_o:w}
 %   The secant of $\pm 0$ is $1$.  The secant of $\pm \infty$ raises an
 %   invalid operation exception.  The secant of \nan{} is itself.
 %   Otherwise, the \texttt{trig} function reduces the argument and turns
@@ -265,7 +265,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_tan_o:w}
+% \begin{macro}[EXP]{\@@_tan_o:w}
 %   The tangent of $\pm 0$ or \nan{} is the same floating point number.
 %   The tangent of $\pm\infty$ raises an invalid operation exception.
 %   Once more, the \texttt{trig} function does the argument reduction
@@ -292,8 +292,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_cot_o:w}
-% \begin{macro}[aux, EXP]{\@@_cot_zero_o:Nfw}
+% \begin{macro}[EXP]{\@@_cot_o:w}
+% \begin{macro}[EXP]{\@@_cot_zero_o:Nfw}
 %   The cotangent of $\pm 0$ is $\pm \infty$ with the same sign, with a
 %   division by zero exception (see \cs{@@_cot_zero_o:Nfw}.  The
 %   cotangent of $\pm\infty$ raises an invalid operation exception.  The
@@ -333,7 +333,7 @@
 %
 % \subsubsection{Distinguishing small and large arguments}
 %
-% \begin{macro}[aux, EXP]{\@@_trig:NNNNNwn}
+% \begin{macro}[EXP]{\@@_trig:NNNNNwn}
 %   The first argument is \cs{use_i:nn} if the operand is in radians and
 %   \cs{use_ii:nn} if it is in degrees.  Arguments |#2| to~|#5| control
 %   what trigonometric function we compute, and |#6| to~|#8| are pieces
@@ -377,7 +377,7 @@
 %
 % \subsubsection{Small arguments}
 %
-% \begin{macro}[aux, EXP]{\@@_trig_small:ww}
+% \begin{macro}[EXP]{\@@_trig_small:ww}
 %   This receives a small extended-precision number in radians and
 %   converts it to a fixed point number.  Some trailing digits may be
 %   lost in the conversion, so we keep the original floating point
@@ -391,7 +391,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_trigd_small:ww}
+% \begin{macro}[EXP]{\@@_trigd_small:ww}
 %   Convert the extended-precision number to radians, then call
 %   \cs{@@_trig_small:ww} to massage it in the form appropriate for the
 %   \texttt{_series} auxiliary.
@@ -407,7 +407,7 @@
 %
 % \subsubsection{Argument reduction in degrees}
 %
-% \begin{macro}[aux, rEXP]
+% \begin{macro}[rEXP]
 %   {
 %     \@@_trigd_large:ww, \@@_trigd_large_auxi:nnnnwNNNN,
 %     \@@_trigd_large_auxii:wNw, \@@_trigd_large_auxiii:www
@@ -513,7 +513,7 @@
 % $0.6\cdot\text{ulp}$ in all cases.
 %
 % ^^A todo: if the exponent range is reduced, store 1/2pi as a simple tl
-% \begin{variable}[aux, EXP]{\@@_trig_inverse_two_pi:}
+% \begin{variable}[EXP]{\@@_trig_inverse_two_pi:}
 %   This macro expands to |,,!| or~|,!| followed by $10112$~decimals of
 %   $10^{-16}/(2\pi)$.  The number of decimals we really need is the
 %   maximum exponent plus the number of digits we later need,~$52$,
@@ -688,7 +688,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[aux, rEXP]
+% \begin{macro}[rEXP]
 %   {
 %     \@@_trig_large:ww,
 %     \@@_trig_large_auxi:wwwwww,
@@ -733,7 +733,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, rEXP]
+% \begin{macro}[rEXP]
 %   {
 %     \@@_trig_large_auxv:www,
 %     \@@_trig_large_auxvi:wnnnnnnnn,
@@ -780,12 +780,12 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, rEXP]
+% \begin{macro}[rEXP]
 %   {
 %     \@@_trig_large_auxvii:w,
 %     \@@_trig_large_auxviii:w,
 %   }
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {
 %     \@@_trig_large_auxix:Nw,
 %     \@@_trig_large_auxx:wNNNNN,
@@ -853,7 +853,7 @@
 %
 % \subsubsection{Computing the power series}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_sin_series_o:NNwwww, \@@_sin_series_aux_o:NNnwww}
 %   Here we receive a conversion function \cs{@@_ep_to_float_o:wwN} or
 %   \cs{@@_ep_inv_to_float_o:wwN}, a \meta{sign} ($0$ or~$2$), a
@@ -941,7 +941,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_tan_series_o:NNwwww, \@@_tan_series_aux_o:Nnwww}
 %   Contrarily to \cs{@@_sin_series_o:NNwwww} which received a
 %   conversion auxiliary as~|#1|, here, |#1| is $0$ for tangent
@@ -1087,8 +1087,8 @@
 %
 % \subsubsection{Arctangent and arccotangent}
 %
-% \begin{macro}[int, EXP]{\@@_atan_o:Nw, \@@_acot_o:Nw}
-% \begin{macro}[aux, EXP]{\@@_atan_dispatch_o:NNnNw}
+% \begin{macro}[EXP]{\@@_atan_o:Nw, \@@_acot_o:Nw}
+% \begin{macro}[EXP]{\@@_atan_dispatch_o:NNnNw}
 %   The parsing step manipulates \texttt{atan} and \texttt{acot} like
 %   \texttt{min} and \texttt{max}, reading in an array of operands, but
 %   also leaves \cs{use_i:nn} or \cs{use_ii:nn} depending on whether the
@@ -1126,7 +1126,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_atanii_o:Nww, \@@_acotii_o:Nww}
+% \begin{macro}[EXP]{\@@_atanii_o:Nww, \@@_acotii_o:Nww}
 %   If either operand is \texttt{nan}, we return it.  If both are
 %   normal, we call \cs{@@_atan_normal_o:NNnwNnw}.  If both are zero or
 %   both infinity, we call \cs{@@_atan_inf_o:NNNw} with argument~$2$,
@@ -1163,7 +1163,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_atan_inf_o:NNNw}
+% \begin{macro}[EXP]{\@@_atan_inf_o:NNNw}
 %   This auxiliary is called whenever one number is $\pm 0$ or
 %   $\pm\infty$ (and neither is \nan{}).  Then the result only depends
 %   on the signs, and its value is a multiple of $\pi/4$.  We use the
@@ -1189,7 +1189,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_atan_normal_o:NNnwNnw}
+% \begin{macro}[EXP]{\@@_atan_normal_o:NNnwNnw}
 %   Here we simply reorder the floating point data into a pair of signed
 %   extended-precision numbers, that is, a sign, an exponent ending with
 %   a comma, and a six-block mantissa ending with a semi-colon.  This
@@ -1207,7 +1207,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_atan_test_o:NwwNwwN}
+% \begin{macro}[EXP]{\@@_atan_test_o:NwwNwwN}
 %   This receives: the sign~|#1| of~$y$, its exponent~|#2|, its $24$
 %   digits~|#3| in groups of~$4$, and similarly for~$x$.  We prepare to
 %   call \cs{@@_atan_combine_o:NwwwwwN} which expects the sign~|#1|, the
@@ -1241,8 +1241,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, rEXP]{\@@_atan_div:wnwwnw, \@@_atan_near:wwwn}
-% \begin{macro}[aux, EXP]{\@@_atan_near_aux:wwn}
+% \begin{macro}[rEXP]{\@@_atan_div:wnwwnw, \@@_atan_near:wwwn}
+% \begin{macro}[EXP]{\@@_atan_near_aux:wwn}
 %   This receives two positive numbers $a$ and~$b$ (equal to $\lvert
 %   x\rvert$ and~$\lvert y\rvert$ in some order), each as an exponent
 %   and $6$~blocks of $4$~digits, such that $0<a<b$.  If $0.41421b<a$,
@@ -1284,7 +1284,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_atan_auxi:ww, \@@_atan_auxii:w}
+% \begin{macro}[EXP]{\@@_atan_auxi:ww, \@@_atan_auxii:w}
 %   Convert~$z$ from a representation as an exponent and a fixed point
 %   number in $[0.01,1)$ to a fixed point number only, then set up the
 %   call to \cs{@@_atan_Taylor_loop:www}, followed by the fixed point
@@ -1304,7 +1304,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_atan_Taylor_loop:www, \@@_atan_Taylor_break:w}
 %   We compute the series of $(\operatorname{atan} z)/z$.  A typical intermediate
 %   stage has $|#1|=2k-1$, $|#2| =
@@ -1335,7 +1335,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]
 %   {\@@_atan_combine_o:NwwwwwN, \@@_atan_combine_aux:ww}
 %   This receives a \meta{sign}, an \meta{octant}, a fixed point value
 %   of $(\operatorname{atan} z)/z$, a fixed point number~$z$, and another
@@ -1399,7 +1399,7 @@
 %
 % \subsubsection{Arcsine and arccosine}
 %
-% \begin{macro}[int, EXP]{\@@_asin_o:w}
+% \begin{macro}[EXP]{\@@_asin_o:w}
 %   Again, the first argument provided by \pkg{l3fp-parse} is
 %   \cs{use_i:nn} if we are to work in radians and \cs{use_ii:nn} for
 %   degrees.  Then comes a floating point number.  The arcsine of $\pm
@@ -1427,7 +1427,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_acos_o:w}
+% \begin{macro}[EXP]{\@@_acos_o:w}
 %   The arccosine of $\pm 0$ is $\pi / 2$ (in degrees,~$90$).  The
 %   arccosine of $\pm\infty$ raises an invalid operation exception.  The
 %   arccosine of \nan{} is itself.  Otherwise, call an auxiliary common
@@ -1456,7 +1456,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_asin_normal_o:NfwNnnnnw}
+% \begin{macro}[EXP]{\@@_asin_normal_o:NfwNnnnnw}
 %   If the exponent~|#5| is at most $0$, the operand lies
 %   within $(-1,1)$ and the operation is permitted: call
 %   \cs{@@_asin_auxi_o:NnNww} with the appropriate arguments.  If the
@@ -1485,7 +1485,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_asin_auxi_o:NnNww, \@@_asin_isqrt:wn}
+% \begin{macro}[EXP]{\@@_asin_auxi_o:NnNww, \@@_asin_isqrt:wn}
 %   We compute $x/\sqrt{1-x^2}$.  This function is used by \texttt{asin}
 %   and \texttt{acos}, but also by \texttt{acsc} and \texttt{asec} after
 %   inverting the operand, thus it must manipulate extended-precision
@@ -1527,7 +1527,7 @@
 %
 % \subsubsection{Arccosecant and arcsecant}
 %
-% \begin{macro}[int, EXP]{\@@_acsc_o:w}
+% \begin{macro}[EXP]{\@@_acsc_o:w}
 %   Cases are mostly labelled by~|#2|, except when |#2| is~$2$: then we
 %   use |#3#2|, which is $02=2$ when the number is $+\infty$ and
 %   $22$~when the number is $-\infty$.  The arccosecant of $\pm 0$
@@ -1553,7 +1553,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_asec_o:w}
+% \begin{macro}[EXP]{\@@_asec_o:w}
 %   The arcsecant of $\pm 0$ raises an invalid operation exception.  The
 %   arcsecant of $\pm\infty$ is $\pi / 2$ (in degrees,~$90$).  The
 %   arcosecant of \nan{} is itself.  Otherwise, do some more tests,
@@ -1581,7 +1581,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_acsc_normal_o:NfwNnw}
+% \begin{macro}[EXP]{\@@_acsc_normal_o:NfwNnw}
 %   If the exponent is non-positive, the operand is less than~$1$ in
 %   absolute value, which is always an invalid operation: complain.
 %   Otherwise, compute the inverse of the operand, and feed it to
