--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -253,7 +253,7 @@
 % Most of the emulation of \pdfTeX{} here is based heavily on Heiko Oberdiek's
 % \pkg{pdftexcmds} package.
 %
-% \begin{macro}[int]{l3kernel}
+% \begin{macro}{l3kernel}
 %   Create a table for the kernel's own use.
 %    \begin{macrocode}
 l3kernel = l3kernel or { }
@@ -292,7 +292,7 @@ local write      = tex.write
 local utf8_char  = unicode.utf8.char
 %    \end{macrocode}
 %
-% \begin{macro}[aux]{escapehex}
+% \begin{macro}{escapehex}
 %   An internal auxiliary to convert a string to the matching hex escape.
 %   This works on a byte basis: extension to handled UTF-8 input is
 %   covered in \pkg{pdftexcmds} but is not currently required here.
@@ -304,7 +304,7 @@ end
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{l3kernel.charcat}
+% \begin{macro}{l3kernel.charcat}
 %   Creating arbitrary chars needs a category code table. As set up here,
 %   one may have been assigned earlier (see \pkg{l3bootstrap}) or a hard-coded
 %   one is used. The latter is intended for format mode and should be adjusted
@@ -319,7 +319,7 @@ l3kernel.charcat = charcat
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{l3kernel.filemdfivesum}
+% \begin{macro}{l3kernel.filemdfivesum}
 %   Read an entire file and hash it: the hash function itself is a built-in.
 %   As Lua is byte-based there is no work needed here in terms of UTF-8
 %   (see \pkg{pdftexcmds} and how it handles strings that have passed through
@@ -341,7 +341,7 @@ l3kernel.filemdfivesum = filemdfivesum
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{l3kernel.filemoddate}
+% \begin{macro}{l3kernel.filemoddate}
 %   See procedure \texttt{makepdftime} in \texttt{utils.c} of
 %   \pdfTeX{}.
 %    \begin{macrocode}
@@ -393,7 +393,7 @@ l3kernel.filemoddate = filemoddate
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{l3kernel.filesize}
+% \begin{macro}{l3kernel.filesize}
 %   A simple disk lookup.
 %    \begin{macrocode}
 local function filesize(name)
@@ -409,7 +409,7 @@ l3kernel.filesize = filesize
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{l3kernel.strcmp}
+% \begin{macro}{l3kernel.strcmp}
 %   String comparison which gives the same results as \pdfTeX{}'s
 %   \tn{pdfstrcmp}, although the ordering should likely not be relied upon!
 %    \begin{macrocode}
