--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -888,7 +888,7 @@
 % \end{macro}
 %
 % \begin{macro}{\bool_show:N, \bool_show:c, \bool_show:n}
-% \begin{macro}[aux]{\@@_to_str:n}
+% \begin{macro}{\@@_to_str:n}
 %   Show the truth value of the boolean, as \texttt{true} or
 %   \texttt{false}.
 %    \begin{macrocode}
@@ -1014,7 +1014,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_get_next:NN}
+% \begin{macro}{\@@_get_next:NN}
 %   The GetNext operation.  Its first argument is \cs{use_i:nnnn},
 %   \cs{use_ii:nnnn}, \cs{use_iii:nnnn}, or \cs{use_iv:nnnn} (we call
 %   these \enquote{states}).  In the first state, this function
@@ -1045,7 +1045,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_!:Nw}
+% \begin{macro}{\@@_!:Nw}
 %   The Not operation reverses the logic: it discards the |!|~token and
 %   calls the GetNext operation with the appropriate first argument.
 %   Namely the first and second states are interchanged, but after
@@ -1060,7 +1060,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_(:Nw}
+% \begin{macro}{\@@_(:Nw}
 %   The Open operation starts a sub-expression after discarding the open
 %   parenthesis.  This is done by calling GetNext (which eventually
 %   discards the corresponding closing parenthesis), with a
@@ -1075,7 +1075,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_p:Nw}
+% \begin{macro}{\@@_p:Nw}
 %   If what follows GetNext is neither |!| nor |(|, evaluate the
 %   predicate using the primitive \cs{__int_value:w}.  The canonical
 %   \texttt{true} and \texttt{false} values have numerical values $1$
@@ -1086,16 +1086,16 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_choose:NNN}
-% \begin{macro}[aux]+\@@_)_0:+
-% \begin{macro}[aux]+\@@_)_1:+
-% \begin{macro}[aux]+\@@_)_2:+
-% \begin{macro}[aux]+\@@_&_0:+
-% \begin{macro}[aux]+\@@_&_1:+
-% \begin{macro}[aux]+\@@_&_2:+
-% \begin{macro}[aux]+\@@_|_0:+
-% \begin{macro}[aux]+\@@_|_1:+
-% \begin{macro}[aux]+\@@_|_2:+
+% \begin{macro}{\@@_choose:NNN}
+% \begin{macro}+\@@_)_0:+
+% \begin{macro}+\@@_)_1:+
+% \begin{macro}+\@@_)_2:+
+% \begin{macro}+\@@_&_0:+
+% \begin{macro}+\@@_&_1:+
+% \begin{macro}+\@@_&_2:+
+% \begin{macro}+\@@_|_0:+
+% \begin{macro}+\@@_|_1:+
+% \begin{macro}+\@@_|_2:+
 %   The arguments are |#1|: a function such as \cs{use_i:nnnn}, |#2|:
 %   $0$ or $1$ encoding the current truth value, |#3|: the next
 %   operation, And, Or or Close.  We distinguish three cases according
@@ -1149,7 +1149,7 @@
 % \end{macro}
 %
 % \begin{macro}[pTF]{\bool_lazy_all:n}
-% \begin{macro}[aux]{\@@_lazy_all:n}
+% \begin{macro}{\@@_lazy_all:n}
 % \UnitTested
 %   Go through the list of expressions, stopping whenever an expression
 %   is \texttt{false}.  If the end is reached without finding any
@@ -1182,7 +1182,7 @@
 % \end{macro}
 %
 % \begin{macro}[pTF]{\bool_lazy_any:n}
-% \begin{macro}[aux]{\@@_lazy_any:n}
+% \begin{macro}{\@@_lazy_any:n}
 % \UnitTested
 %   Go through the list of expressions, stopping whenever an expression
 %   is \texttt{true}.  If the end is reached without finding any
@@ -1324,9 +1324,9 @@
 %
 % \begin{macro}{\prg_replicate:nn}
 % \UnitTested
-% \begin{macro}[aux]{\@@_replicate:N, \@@_replicate_first:N}
-% \begin{macro}[aux]{\@@_replicate_}
-% \begin{macro}[aux]
+% \begin{macro}{\@@_replicate:N, \@@_replicate_first:N}
+% \begin{macro}{\@@_replicate_}
+% \begin{macro}
 %   {
 %     \@@_replicate_0:n,
 %     \@@_replicate_1:n,
@@ -1339,7 +1339,7 @@
 %     \@@_replicate_8:n,
 %     \@@_replicate_9:n
 %   }
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_replicate_first_-:n,
 %     \@@_replicate_first_0:n,
@@ -1492,7 +1492,7 @@
 %
 % \subsection{Internal programming functions}
 %
-% \begin{macro}[int]{\group_align_safe_begin:, \group_align_safe_end:}
+% \begin{macro}{\group_align_safe_begin:, \group_align_safe_end:}
 %   \TeX{}'s alignment structures present many problems. As Knuth says
 %   himself in \emph{\TeX : The Program}: \enquote{It's sort of a miracle
 %   whenever \tn{halign} or \tn{valign} work, [\ldots]} One problem relates
