--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -522,7 +522,7 @@
 % (equal to \cs{scan_stop:}), and \cs{@@_pair:wn} can be used to map
 % through the property list.
 %
-% \begin{macro}[int]{\s_@@}
+% \begin{macro}{\s_@@}
 %   A private scan mark is used as a marker after each key, and at the
 %   very beginning of the property list.
 %    \begin{macrocode}
@@ -530,7 +530,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_pair:wn}
+% \begin{macro}{\@@_pair:wn}
 %   The delimiter is always defined, but when misused simply triggers an
 %   error and removes its argument.
 %    \begin{macrocode}
@@ -629,7 +629,7 @@
 % \begin{macro}{\prop_set_from_keyval:Nn, \prop_set_from_keyval:cn}
 % \begin{macro}{\prop_gset_from_keyval:Nn, \prop_gset_from_keyval:cn}
 % \begin{macro}{\prop_const_from_keyval:Nn, \prop_const_from_keyval:cn}
-% \begin{macro}[aux]
+% \begin{macro}
 %   {
 %     \@@_from_keyval:n,
 %     \@@_from_keyval_loop:w,
@@ -707,9 +707,9 @@
 %
 % \subsection{Accessing data in property lists}
 %
-% \begin{macro}[int]{\@@_split:NnTF}
-% \begin{macro}[aux]{\@@_split_aux:NnTF}
-% \begin{macro}[aux, EXP]{\@@_split_aux:w}
+% \begin{macro}{\@@_split:NnTF}
+% \begin{macro}{\@@_split_aux:NnTF}
+% \begin{macro}[EXP]{\@@_split_aux:w}
 %   This function is used by most of the module, and hence must be fast.
 %   It receives a \meta{property list}, a \meta{key}, a \meta{true code}
 %   and a \meta{false code}.  The aim is to split the \meta{property
@@ -837,7 +837,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\prop_item:Nn, \prop_item:cn}
-% \begin{macro}[aux, EXP]{\@@_item_Nn:nwwn}
+% \begin{macro}[EXP]{\@@_item_Nn:nwwn}
 %   Getting the value corresponding to a key in a property list in an
 %   expandable fashion is similar to mapping some tokens.  Go through
 %   the property list one \meta{key}--\meta{value} pair at a time: the
@@ -917,7 +917,7 @@
 %     \prop_gput:cnn, \prop_gput:cnV, \prop_gput:cno, \prop_gput:cnx,
 %     \prop_gput:cVn, \prop_gput:cVV, \prop_gput:con, \prop_gput:coo
 %   }
-% \begin{macro}[aux]{\@@_put:NNnn}
+% \begin{macro}{\@@_put:NNnn}
 %   Since the branches of \cs{@@_split:NnTF} are used as the replacement
 %   text of an internal macro, and since the \meta{key} and new
 %   \meta{value} may contain arbitrary tokens, it is not safe to include
@@ -961,7 +961,7 @@
 %   {\prop_put_if_new:Nnn, \prop_put_if_new:cnn}
 % \begin{macro}[tested = m3prop002]
 %   {\prop_gput_if_new:Nnn, \prop_gput_if_new:cnn}
-% \begin{macro}[aux]{\@@_put_if_new:NNnn}
+% \begin{macro}{\@@_put_if_new:NNnn}
 %   Adding conditionally also splits. If the key is already present,
 %   the three brace groups given by \cs{@@_split:NnTF} are removed.
 %   If the key is new, then the value is added, being careful to
@@ -1021,7 +1021,7 @@
 %     \prop_if_in:Nn, \prop_if_in:NV, \prop_if_in:No,
 %     \prop_if_in:cn, \prop_if_in:cV, \prop_if_in:co
 %   }
-% \begin{macro}[aux,EXP]{\@@_if_in:nwwn, \@@_if_in:N}
+% \begin{macro}[EXP]{\@@_if_in:nwwn, \@@_if_in:N}
 %   Testing expandably if a key is in a property list
 %   requires to go through the key--value pairs one by one.
 %   This is rather slow, and a faster test would be
@@ -1121,7 +1121,7 @@
 %     \prop_map_function:NN, \prop_map_function:Nc,
 %     \prop_map_function:cN, \prop_map_function:cc
 %   }
-% \begin{macro}[aux]{\@@_map_function:Nwwn}
+% \begin{macro}{\@@_map_function:Nwwn}
 %   The fastest way to do a recursion here is to use an
 %   \cs{if_meaning:w} test: the keys are strings, and thus cannot match
 %   the marker \cs{q_recursion_tail}.  A special case to note is when
