--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -444,7 +444,7 @@
 % \begin{macro}
 %   {\quark_if_recursion_tail_stop_do:nn, \quark_if_recursion_tail_stop_do:on}
 % \UnitTested
-% \begin{macro}[aux]{\@@_if_recursion_tail:w}
+% \begin{macro}{\@@_if_recursion_tail:w}
 %   See \cs{quark_if_nil:nTF} for the details.  Expanding
 %   \cs{@@_if_recursion_tail:w} once in front of the tokens chosen here
 %   gives an empty result if and only if |#1|~is exactly
@@ -534,7 +534,7 @@
 % \UnitTested
 % \begin{macro}[pTF]{\quark_if_no_value:n}
 % \UnitTested
-% \begin{macro}[aux]{\@@_if_nil:w, \@@_if_no_value:w}
+% \begin{macro}{\@@_if_nil:w, \@@_if_no_value:w}
 %   Let us explain |\quark_if_nil:n(TF)|.  Expanding \cs{@@_if_nil:w}
 %   once is safe thanks to the trailing \cs{q_nil} |??!|.  The result of
 %   expanding once is empty if and only if both delimited arguments |#1|
@@ -594,7 +594,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[int]{\@@_new:N}
+% \begin{macro}{\@@_new:N}
 % \UnitTested
 %   Check whether the variable is already a scan mark,
 %   then declare it to be equal to \cs{scan_stop:} globally.
@@ -623,7 +623,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[int]{\__use_none_delimit_by_s__stop:w}
+% \begin{macro}{\__use_none_delimit_by_s__stop:w}
 % \UnitTested
 %   Similar to \cs{use_none_delimit_by_q_stop:w}.
 %    \begin{macrocode}
