--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -982,9 +982,9 @@
 %     \str_replace_once:Nnn,  \str_replace_once:cnn,
 %     \str_greplace_once:Nnn, \str_greplace_once:cnn
 %   }
-% \begin{macro}[aux]{\@@_replace:NNNnn}
-% \begin{macro}[aux]{\@@_replace_aux:NNNnnn}
-% \begin{macro}[aux]{\@@_replace_next:w}
+% \begin{macro}{\@@_replace:NNNnn}
+% \begin{macro}{\@@_replace_aux:NNNnnn}
+% \begin{macro}{\@@_replace_next:w}
 %   Start by applying \cs{tl_to_str:n} to convert the old and new token
 %   lists to strings, and also apply \cs{tl_to_str:N} to avoid any
 %   issues if we are fed a token list variable.  Then the code is a much
@@ -1086,8 +1086,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_if_eq_x:nn}
-% \begin{macro}[aux, EXP]{\@@_escape_x:n}
+% \begin{macro}[EXP]{\@@_if_eq_x:nn}
+% \begin{macro}[EXP]{\@@_escape_x:n}
 %   String comparisons rely on the primitive \cs[index=pdfstrcmp]{(pdf)strcmp} if available:
 %   \LuaTeX{} does not have it, so emulation is required. As the net result
 %   is that we do not \emph{always} use the primitive, the correct approach
@@ -1127,7 +1127,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_if_eq_x_return:nn}
+% \begin{macro}[EXP]{\@@_if_eq_x_return:nn}
 %   It turns out that we often need to compare a token list
 %   with the result of applying some function to it, and
 %   return with \cs{prg_return_true/false:}. This test is
@@ -1222,8 +1222,8 @@
 %
 % \begin{macro}[EXP, noTF]
 %   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv, \str_case_x:nn}
-% \begin{macro}[EXP, aux]{\@@_case:nnTF, \@@_case_x:nnTF}
-% \begin{macro}[aux, EXP]
+% \begin{macro}[EXP]{\@@_case:nnTF, \@@_case_x:nnTF}
+% \begin{macro}[EXP]
 %   {\@@_case:nw, \@@_case_x:nw, \@@_case_end:nw}
 %   Much the same as \cs[index=tl_case:nn]{tl_case:nn(TF)} here:
 %   just a change in the internal comparison.
@@ -1301,8 +1301,8 @@
 % \begin{macro}{\str_map_variable:NNn, \str_map_variable:cNn}
 % \begin{macro}{\str_map_break:}
 % \begin{macro}{\str_map_break:n}
-% \begin{macro}[aux,rEXP]{\@@_map_function:w, \@@_map_function:Nn}
-% \begin{macro}[aux]{\@@_map_inline:NN, \@@_map_variable:NnN}
+% \begin{macro}[rEXP]{\@@_map_function:w, \@@_map_function:Nn}
+% \begin{macro}{\@@_map_inline:NN, \@@_map_variable:NnN}
 %   The inline and variable mappings are similar to the usual token list
 %   mappings but start out by turning the argument to an ``other
 %   string''.  Doing the same for the expandable function mapping would
@@ -1398,8 +1398,8 @@
 %
 % \subsection{Accessing specific characters in a string}
 %
-% \begin{macro}[EXP, int]{\@@_to_other:n}
-% \begin{macro}[EXP, aux]{\@@_to_other_loop:w, \@@_to_other_end:w}
+% \begin{macro}[EXP]{\@@_to_other:n}
+% \begin{macro}[EXP]{\@@_to_other_loop:w, \@@_to_other_end:w}
 %   First apply \cs{tl_to_str:n}, then replace all spaces by
 %   \enquote{other} spaces, $8$ at a time, storing the converted part of
 %   the string between the \cs{q_mark} and \cs{q_stop} markers.  The end
@@ -1436,8 +1436,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[rEXP, int]{\@@_to_other_fast:n}
-% \begin{macro}[rEXP, aux]{\@@_to_other_fast_loop:w, \@@_to_other_fast_end:w}
+% \begin{macro}[rEXP]{\@@_to_other_fast:n}
+% \begin{macro}[rEXP]{\@@_to_other_fast_loop:w, \@@_to_other_fast_end:w}
 %   The difference with \cs{@@_to_other:n} is that the converted part is
 %   left in the input stream, making these commands only
 %   restricted-expandable.
@@ -1470,7 +1470,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_item:Nn, \str_item:cn, \str_item:nn, \str_item_ignore_spaces:nn}
-% \begin{macro}[EXP, aux]{\@@_item:nn, \@@_item:w}
+% \begin{macro}[EXP]{\@@_item:nn, \@@_item:w}
 %   The \cs{str_item:nn} hands its argument with spaces escaped to
 %   \cs{@@_item:nn}, and makes sure to turn the result back into
 %   a proper string (with category code~$10$ spaces) eventually.  The
@@ -1533,8 +1533,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP, aux]{\@@_skip_exp_end:w}
-% \begin{macro}[EXP, aux]
+% \begin{macro}[EXP]{\@@_skip_exp_end:w}
+% \begin{macro}[EXP]
 %   {\@@_skip_loop:wNNNNNNNN, \@@_skip_end:w, \@@_skip_end:NNNNNNNN}
 %   Removes |max(#1,0)| characters from the input stream, and then
 %   leaves \cs{exp_end:}.  This should be expanded using
@@ -1574,8 +1574,8 @@
 %
 % \begin{macro}[EXP]
 %   {\str_range:Nnn, \str_range:nnn, \str_range_ignore_spaces:nnn}
-% \begin{macro}[EXP, int]{\@@_range:nnn}
-% \begin{macro}[EXP, aux]{\@@_range:w, \@@_range:nnw}
+% \begin{macro}[EXP]{\@@_range:nnn}
+% \begin{macro}[EXP]{\@@_range:w, \@@_range:nnw}
 %   Sanitize the string.  Then evaluate the arguments.  At this stage we
 %   also decrement the \meta{start index}, since our goal is to know how
 %   many characters should be removed.  Then limit the range to be
@@ -1623,7 +1623,7 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
-% \begin{macro}[EXP, aux]{\@@_range_normalize:nn}
+% \begin{macro}[EXP]{\@@_range_normalize:nn}
 %   This function converts an \meta{index} argument into an explicit
 %   position in the string (a result of $0$ denoting \enquote{out of
 %     bounds}).  Expects two explicit integer arguments: the
@@ -1652,8 +1652,8 @@
   }
 %    \end{macrocode}
 % \end{macro}
-% \begin{macro}[EXP, aux]{\@@_collect_delimit_by_q_stop:w}
-% \begin{macro}[EXP, aux]
+% \begin{macro}[EXP]{\@@_collect_delimit_by_q_stop:w}
+% \begin{macro}[EXP]
 %   {
 %     \@@_collect_loop:wn, \@@_collect_loop:wnNNNNNNN,
 %     \@@_collect_end:wn, \@@_collect_end:nnnnnnnnw
@@ -1701,7 +1701,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_count_spaces:N, \str_count_spaces:c, \str_count_spaces:n}
-% \begin{macro}[EXP, aux]{\@@_count_spaces_loop:w}
+% \begin{macro}[EXP]{\@@_count_spaces_loop:w}
 %   To speed up this function, we grab and discard $9$ space-delimited
 %   arguments in each iteration of the loop.  The loop stops when the
 %   last argument is one of the trailing |X|\meta{number}, and that
@@ -1734,8 +1734,8 @@
 %
 % \begin{macro}[EXP]
 %   {\str_count:N, \str_count:c, \str_count:n, \str_count_ignore_spaces:n}
-% \begin{macro}[EXP, int]{\@@_count:n}
-% \begin{macro}[EXP, aux]{\@@_count_aux:n, \@@_count_loop:NNNNNNNNN}
+% \begin{macro}[EXP]{\@@_count:n}
+% \begin{macro}[EXP]{\@@_count_aux:n, \@@_count_loop:NNNNNNNNN}
 %   To count characters in a string we could first escape all spaces
 %   using \cs{@@_to_other:n}, then pass the result to \cs{tl_count:n}.
 %   However, the escaping step would be quadratic in the number of
@@ -1797,7 +1797,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_head:N, \str_head:c, \str_head:n, \str_head_ignore_spaces:n}
-% \begin{macro}[EXP, aux]{\@@_head:w}
+% \begin{macro}[EXP]{\@@_head:w}
 %   The \texttt{_ignore_spaces} variant applies \cs{tl_to_str:n} then
 %   grabs the first item, thus skipping spaces.
 %   As usual, \cs{str_head:N} expands its argument and
@@ -1834,7 +1834,7 @@
 %
 % \begin{macro}[EXP]
 %   {\str_tail:N, \str_tail:c, \str_tail:n, \str_tail_ignore_spaces:n}
-% \begin{macro}[EXP, aux]{\@@_tail_auxi:w, \@@_tail_auxii:w}
+% \begin{macro}[EXP]{\@@_tail_auxi:w, \@@_tail_auxii:w}
 %   Getting the tail is a little bit more convoluted than the head of a
 %   string.  We hit the front of the string with \cs{reverse_if:N}
 %   \cs{if_charcode:w} \cs{scan_stop:}.  This removes the first
@@ -1877,15 +1877,15 @@
 %     \str_lower_case:n, \str_lower_case:f,
 %     \str_upper_case:n, \str_upper_case:f
 %   }
-% \begin{macro}[aux, EXP]{\@@_change_case:nn}
-% \begin{macro}[aux, EXP]{\@@_change_case_aux:nn}
-% \begin{macro}[aux, EXP]{\@@_change_case_result:n}
-% \begin{macro}[aux, EXP]{\@@_change_case_output:nw, \@@_change_case_output:fw}
-% \begin{macro}[aux, EXP]{\@@_change_case_end:nw}
-% \begin{macro}[aux, EXP]{\@@_change_case_loop:nw}
-% \begin{macro}[aux, EXP]{\@@_change_case_space:n}
-% \begin{macro}[aux, EXP]{\@@_change_case_char:nN}
-% \begin{macro}[aux]
+% \begin{macro}[EXP]{\@@_change_case:nn}
+% \begin{macro}[EXP]{\@@_change_case_aux:nn}
+% \begin{macro}[EXP]{\@@_change_case_result:n}
+% \begin{macro}[EXP]{\@@_change_case_output:nw, \@@_change_case_output:fw}
+% \begin{macro}[EXP]{\@@_change_case_end:nw}
+% \begin{macro}[EXP]{\@@_change_case_loop:nw}
+% \begin{macro}[EXP]{\@@_change_case_space:n}
+% \begin{macro}[EXP]{\@@_change_case_char:nN}
+% \begin{macro}
 %   {\@@_lookup_lower:N, \@@_lookup_upper:N, \@@_lookup_fold:N}
 %   Case changing for programmatic reasons is done by first detokenizing
 %   input then doing a simple loop that only has to worry about spaces
