--- a/l3packages/l3doc/examples/testing.dtx
+++ b/l3packages/l3doc/examples/testing.dtx
@@ -209,12 +209,12 @@
 % necessary to highlight it as much and you also don't need to check it
 % for, say, having a test function and having a documentation chunk
 % earlier in a \env{function} environment.  In this case, write
-% |\begin{macro}[aux]| to mark it as such; its margin
+% |\begin{macro}| to mark it as such; its margin
 % call-out is then printed in grey.
 %
 % Similarly, an internal package function still requires documentation
 % but usually is not documented for users to see; these can be
-% marked as such with |\begin{macro}[int]|.
+% marked as such with |\begin{macro}|.
 %
 % For documenting \pkg{expl3}-type conditionals, you may also pass this
 % environment a |TF| option (and omit it from the function name) to
@@ -358,7 +358,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_detect_internals_bool, \l_@@_detect_internals_tl}
+% \begin{variable}{\l_@@_detect_internals_bool, \l_@@_detect_internals_tl}
 %   If \texttt{true}, \pkg{l3doc} will check for use of internal
 %   commands \cs[no-index]{__\meta{pkg}_\ldots{}} from other packages in
 %   \texttt{macrocode} environments and in~\cs{cs}.  Also a token list
@@ -371,7 +371,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_output_coffin}
+% \begin{variable}{\l_@@_output_coffin}
 %   The \env{function} environment is typeset by combining coffins
 %   containing various pieces (function names, description, \emph{etc.})
 %   into this coffin.
@@ -380,7 +380,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {\l_@@_functions_coffin, \l_@@_descr_coffin, \l_@@_syntax_coffin}
 %   These coffins contain respectively the list of function names
 %   (argument of the \env{function} environment), the text between
@@ -393,7 +393,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_syntax_box}
+% \begin{variable}{\g_@@_syntax_box}
 %   The contents of the \env{syntax} environment are typeset in this box
 %   before being transferred to \cs{l_@@_syntax_coffin}.
 %    \begin{macrocode}
@@ -401,7 +401,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_in_function_bool}
+% \begin{variable}{\l_@@_in_function_bool}
 %   True when inside a \texttt{function} or \texttt{variable}
 %   environment.  Used by the \texttt{syntax} environment to determine
 %   its behaviour.
@@ -410,7 +410,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_long_name_bool, \l_@@_trial_width_dim}
+% \begin{variable}{\l_@@_long_name_bool, \l_@@_trial_width_dim}
 %   The boolean \cs{l_@@_long_name_bool} is \texttt{true} if the width
 %   \cs{l_@@_trial_width_dim} of the coffin \cs{l_@@_functions_coffin}
 %   (containing the current function names) is bigger than the space
@@ -421,7 +421,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_nested_macro_int}
+% \begin{variable}{\l_@@_nested_macro_int}
 %   The nesting of \env{macro} environments (this is now~$0$ outside a
 %   \env{macro} environment).
 %    \begin{macrocode}
@@ -429,7 +429,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {
 %     \l_@@_macro_tested_bool,
 %     \g_@@_missing_tests_prop,
@@ -447,7 +447,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[aux]
+% \begin{variable}
 %   {
 %     \l_@@_macro_internal_bool,
 %     \l_@@_macro_aux_bool,
@@ -478,7 +478,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[aux]
+% \begin{variable}
 %   {
 %     \g_@@_lmodern_bool,
 %     \g_@@_checkfunc_bool,
@@ -492,7 +492,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int, \l_@@_tmpa_seq}
+% \begin{variable}{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int, \l_@@_tmpa_seq}
 %   Some temporary variables.
 %    \begin{macrocode}
 \tl_new:N \l_@@_tmpa_tl
@@ -502,7 +502,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_block_tl}
+% \begin{variable}{\l_@@_names_block_tl}
 %   List of local sequence variables (produced through
 %   \cs{@@_lseq_name:n}), one for each set of variants in a
 %   \env{function} or \env{macro} environment.  More precisely these
@@ -516,7 +516,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_variants_seq}
+% \begin{variable}{\g_@@_variants_seq}
 %   Stores rather temporarily the list of variants (signatures only) of
 %   a function/macro that is being documented.  It is global because we
 %   need it to keep its value throughout cells of an alignment.
@@ -525,7 +525,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_verb_bool}
+% \begin{variable}{\l_@@_names_verb_bool}
 %   Set to |true| if the main argument of a macro/function environment
 %   should be used as is, without removing any comma or space.
 %    \begin{macrocode}
@@ -533,7 +533,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_names_seq}
+% \begin{variable}{\l_@@_names_seq}
 %   List of functions/environments/\ldots{} appearing as arguments of a
 %   given \env{function} or \env{macro} environment.  These are the
 %   names after conversion of |_@@| and |@@| to |__|\meta{module name}
@@ -543,7 +543,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\g_@@_nested_names_seq}
+% \begin{variable}{\g_@@_nested_names_seq}
 %   Collects all macros in nested \env{macro} environments, to use them
 %   in the \enquote{End definition} text.
 %    \begin{macrocode}
@@ -551,7 +551,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\c_@@_backslash_tl, \c_@@_backslash_token}
+% \begin{variable}{\c_@@_backslash_tl, \c_@@_backslash_token}
 %   A single backslash, as a token list, or as an implicit character
 %   token.
 %    \begin{macrocode}
@@ -611,7 +611,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]
+% \begin{variable}
 %   {
 %     \l_@@_cmd_tl,
 %     \l_@@_cmd_index_tl,
@@ -663,7 +663,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_function_label_clist, \l_@@_no_label_bool}
+% \begin{variable}{\l_@@_function_label_clist, \l_@@_no_label_bool}
 %   Option of a \env{function} environment which replaces the label that
 %   would normally be inserted by labels for the given list of control
 %   sequences.  This is only useful to avoid duplicate labels when a
@@ -674,7 +674,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_date_added_tl, \l_@@_date_updated_tl}
+% \begin{variable}{\l_@@_date_added_tl, \l_@@_date_updated_tl}
 %   Values of some options of the \env{function} environment.
 %    \begin{macrocode}
 \tl_new:N \l_@@_date_added_tl
@@ -682,7 +682,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_macro_argument_tl}
+% \begin{variable}{\l_@@_macro_argument_tl}
 %   Save the argument of a \env{macro} or \env{function} environment for
 %   use in error messages.
 %    \begin{macrocode}
@@ -697,7 +697,7 @@
 %
 % \subsection{Variants and helpers}
 %
-% \begin{macro}[aux]{\@@_tmpa:w, \@@_tmpb:w}
+% \begin{macro}{\@@_tmpa:w, \@@_tmpb:w}
 %   Auxiliary macros for temporary use.
 %    \begin{macrocode}
 \cs_new_eq:NN \@@_tmpa:w ?
@@ -860,7 +860,7 @@
 %
 % \bigskip\bigskip
 %
-% \begin{macro}[aux]{\foo_aux:}
+% \begin{macro}{\foo_aux:}
 %   Testing the \enquote{aux} option.
 % \end{macro}
 %
