--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1141,7 +1141,7 @@
 %
 % \begin{macro}{\box_log:N, \box_log:c}
 % \begin{macro}{\box_log:Nnn, \box_log:cnn}
-% \begin{macro}[aux]{\@@_log:nNnn}
+% \begin{macro}{\@@_log:nNnn}
 %   Getting \TeX{} to write to the log without interruption the run is done by
 %   altering the interaction mode. For that, the \eTeX{} extensions are needed.
 %    \begin{macrocode}
@@ -1162,7 +1162,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_show:NNnn, \@@_show:NNff}
+% \begin{macro}{\@@_show:NNnn, \@@_show:NNff}
 %   The internal auxiliary to actually do the output uses a group to deal
 %   with breadth and depth values. The \cs{use:n} here gives better output
 %   appearance. Setting \tn{tracingonline} and \tn{errorcontextlines} is
@@ -1584,9 +1584,9 @@
 % \end{variable}
 %
 % \begin{macro}{\box_rotate:Nn}
-% \begin{macro}[aux]{\@@_rotate:N}
-% \begin{macro}[aux]{\@@_rotate_x:nnN, \@@_rotate_y:nnN}
-% \begin{macro}[aux]
+% \begin{macro}{\@@_rotate:N}
+% \begin{macro}{\@@_rotate_x:nnN, \@@_rotate_y:nnN}
+% \begin{macro}
 %   {
 %     \@@_rotate_quadrant_one:,   \@@_rotate_quadrant_two:,
 %     \@@_rotate_quadrant_three:, \@@_rotate_quadrant_four:
@@ -1797,9 +1797,9 @@
 %
 % \begin{macro}
 %   {\box_resize_to_wd_and_ht_plus_dp:Nnn, \box_resize_to_wd_and_ht_plus_dp:cnn}
-% \begin{macro}[aux]{\@@_resize_set_corners:N}
-% \begin{macro}[aux]{\@@_resize:N}
-% \begin{macro}[aux]{\@@_resize:NNN}
+% \begin{macro}{\@@_resize_set_corners:N}
+% \begin{macro}{\@@_resize:N}
+% \begin{macro}{\@@_resize:NNN}
 %   Resizing a box starts by working out the various dimensions of the
 %   existing box.
 %    \begin{macrocode}
@@ -1940,7 +1940,7 @@
 % \end{macro}
 %
 % \begin{macro}{\box_scale:Nnn, \box_scale:cnn}
-% \begin{macro}[aux]{\@@_scale_aux:N}
+% \begin{macro}{\@@_scale_aux:N}
 %   When scaling a box, setting the scaling itself is easy enough. The
 %   new dimensions are also relatively easy to find, allowing only for
 %   the need to keep them positive in all cases. Once that is done then
@@ -1983,7 +1983,7 @@
 %     \box_autosize_to_wd_and_ht_plus_dp:cnn ,
 %     \box_autosize_to_wd_and_ht_plus_dp:Nnn
 %   }
-% \begin{macro}[aux]{\@@_autosize:Nnnn}
+% \begin{macro}{\@@_autosize:Nnnn}
 %   Although autosizing a box uses dimensions, it has more in common in
 %   implementation with scaling. As such, most of the real work here is
 %   done elsewhere.
@@ -2010,7 +2010,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_resize_common:N}
+% \begin{macro}{\@@_resize_common:N}
 %   The main resize function places its input into a box which start
 %   off with zero width, and includes the handles for engine rescaling.
 %    \begin{macrocode}
