--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -66,7 +66,7 @@
 %<@@=deprecation>
 %    \end{macrocode}
 %
-% \begin{macro}[aux]{\@@_error:Nnn}
+% \begin{macro}{\@@_error:Nnn}
 %   The \tn{outer} definition here ensures the command cannot appear
 %   in an argument.  Use this auxiliary on all commands that have been
 %   removed since 2015.
