--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -883,7 +883,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int]{\:::}
+% \begin{macro}{\:::}
 %   The end marker is just another name for the identity function.
 %    \begin{macrocode}
 \cs_new:Npn \::: #1 {#1}
@@ -960,7 +960,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[int]{\::x}
+% \begin{macro}{\::x}
 %   This function is used to expand an argument fully.
 %    \begin{macrocode}
 \cs_new_protected:Npn \::x #1 \::: #2#3
@@ -1573,8 +1573,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_generate_variant:N}
-% \begin{macro}[aux]{\@@_generate_variant:ww, \@@_generate_variant:wwNw}
+% \begin{macro}{\@@_generate_variant:N}
+% \begin{macro}{\@@_generate_variant:ww, \@@_generate_variant:wwNw}
 %   The goal here is to pick up protected parent functions.  There are
 %   four cases: the parent function can be a primitive or a macro, and
 %   can be expandable or not.  For non-expandable primitives, all
@@ -1629,7 +1629,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_generate_variant:nnNN}
+% \begin{macro}{\@@_generate_variant:nnNN}
 %   \begin{arguments}
 %     \item Base name.
 %     \item Base signature.
@@ -1653,7 +1653,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_generate_variant:Nnnw}
+% \begin{macro}{\@@_generate_variant:Nnnw}
 %   \begin{arguments}
 %     \item Base function.
 %     \item Base name.
@@ -1923,7 +1923,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux]{\@@_generate_variant:wwNN}
+% \begin{macro}{\@@_generate_variant:wwNN}
 %   If the variant form has already been defined, log its existence
 %   (provided \texttt{log-functions} is active).
 %   Otherwise, make sure that the |\exp_args:N #3| form is defined, and
@@ -1958,8 +1958,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int]{\@@_generate_internal_variant:n}
-% \begin{macro}[aux]{\@@_generate_internal_variant:wwnw}
+% \begin{macro}{\@@_generate_internal_variant:n}
+% \begin{macro}{\@@_generate_internal_variant:wwnw}
 % \begin{macro}[rEXP]{\@@_generate_internal_variant_loop:n}
 %   Test if |\exp_args:N #1| is already defined and if not define it via
 %   the |\::| commands using the chars in |#1|.  If |#1| contains an |x|
